@@ -20,7 +20,6 @@
 
 package megamek.client.ui.swing;
 
-import java.awt.Dimension;
 import java.awt.GridBagConstraints;
 import java.awt.GridBagLayout;
 import java.awt.GridLayout;
@@ -31,11 +30,11 @@ import java.awt.event.ItemEvent;
 import java.awt.event.ItemListener;
 import java.awt.event.WindowAdapter;
 import java.awt.event.WindowEvent;
-import java.io.File;
 import java.util.ArrayList;
+import java.util.Arrays;
 import java.util.Enumeration;
 import java.util.HashMap;
-import java.util.Iterator;
+import java.util.List;
 import java.util.TreeSet;
 
 import javax.swing.JButton;
@@ -54,39 +53,50 @@ import megamek.client.ui.GBC;
 import megamek.client.ui.Messages;
 import megamek.common.Aero;
 import megamek.common.BattleArmor;
-import megamek.common.Compute;
+import megamek.common.Board;
 import megamek.common.Configuration;
 import megamek.common.Crew;
+import megamek.common.Dropship;
 import megamek.common.Entity;
-import megamek.common.EntitySelector;
+import megamek.common.EntityMovementMode;
 import megamek.common.EquipmentType;
 import megamek.common.GunEmplacement;
+import megamek.common.IAero;
 import megamek.common.IGame;
 import megamek.common.IPlayer;
 import megamek.common.Infantry;
+import megamek.common.Jumpship;
+import megamek.common.LAMPilot;
+import megamek.common.LandAirMech;
 import megamek.common.Mech;
 import megamek.common.MiscType;
 import megamek.common.Mounted;
 import megamek.common.OffBoardDirection;
 import megamek.common.Protomech;
+import megamek.common.QuadVee;
+import megamek.common.SmallCraft;
 import megamek.common.Tank;
 import megamek.common.TechConstants;
 import megamek.common.VTOL;
 import megamek.common.WeaponType;
 import megamek.common.options.IOption;
 import megamek.common.options.IOptionGroup;
+import megamek.common.options.OptionsConstants;
 import megamek.common.options.PartialRepairs;
 import megamek.common.options.PilotOptions;
 import megamek.common.options.Quirks;
 import megamek.common.options.WeaponQuirks;
-import megamek.common.preference.PreferenceManager;
+import megamek.common.util.MegaMekFile;
 import megamek.common.verifier.EntityVerifier;
 import megamek.common.verifier.TestAero;
 import megamek.common.verifier.TestBattleArmor;
 import megamek.common.verifier.TestEntity;
+import megamek.common.verifier.TestInfantry;
 import megamek.common.verifier.TestMech;
 import megamek.common.verifier.TestSupportVehicle;
 import megamek.common.verifier.TestTank;
+import megamek.common.weapons.ArtilleryBayWeapon;
+import megamek.common.weapons.bayweapons.CapitalMissileBayWeapon;
 
 /**
  * A dialog that a player can use to customize his mech before battle.
@@ -104,91 +114,24 @@ public class CustomMechDialog extends ClientDialog implements ActionListener,
      */
     private static final long serialVersionUID = -6809436986445582731L;
 
-    private JPanel panPilot;
+    public static int DONE = 0;
+    public static int NEXT = 1;
+    public static int PREV = 2;
+
+    private CustomPilotView[] panCrewMember;
     private JPanel panDeploy;
     private QuirksPanel panQuirks;
     private JPanel panPartReps;
-
-    private JScrollPane scrPilot;
-    private JScrollPane scrEquip;
-    private JScrollPane scrDeploy;
-    private JScrollPane scrQuirks;
-    private JScrollPane scrPartreps;
 
     private JPanel panOptions;
     // private JScrollPane scrOptions;
 
     private JTabbedPane tabAll;
 
-    private JLabel labName = new JLabel(
-            Messages.getString("CustomMechDialog.labName"), SwingConstants.RIGHT); //$NON-NLS-1$
-
-    private JTextField fldName = new JTextField(20);
-
-    private JLabel labNick = new JLabel(
-            Messages.getString("CustomMechDialog.labNick"), SwingConstants.RIGHT); //$NON-NLS-1$
-
-    private JTextField fldNick = new JTextField(20);
-
-    private JLabel labGunnery = new JLabel(
-            Messages.getString("CustomMechDialog.labGunnery"), SwingConstants.RIGHT); //$NON-NLS-1$
-
-    private JTextField fldGunnery = new JTextField(3);
-
-    private JLabel labGunneryL = new JLabel(
-            Messages.getString("CustomMechDialog.labGunneryL"), SwingConstants.RIGHT); //$NON-NLS-1$
-
-    private JTextField fldGunneryL = new JTextField(3);
-
-    private JLabel labGunneryM = new JLabel(
-            Messages.getString("CustomMechDialog.labGunneryM"), SwingConstants.RIGHT); //$NON-NLS-1$
-
-    private JTextField fldGunneryM = new JTextField(3);
-
-    private JLabel labGunneryB = new JLabel(
-            Messages.getString("CustomMechDialog.labGunneryB"), SwingConstants.RIGHT); //$NON-NLS-1$
-
-    private JTextField fldGunneryB = new JTextField(3);
-
-    private JLabel labPiloting = new JLabel(
-            Messages.getString("CustomMechDialog.labPiloting"), SwingConstants.RIGHT); //$NON-NLS-1$
-
-    private JTextField fldPiloting = new JTextField(3);
-
-    private JLabel labArtillery = new JLabel(
-            Messages.getString("CustomMechDialog.labArtillery"), SwingConstants.RIGHT); //$NON-NLS-1$
-
-    private JTextField fldArtillery = new JTextField(3);
-
-    private JLabel labFatigue = new JLabel(
-            Messages.getString("CustomMechDialog.labFatigue"), SwingConstants.RIGHT); //$NON-NLS-1$
-
-    private JTextField fldFatigue = new JTextField(3);
-
-    private JLabel labTough = new JLabel(
-            Messages.getString("CustomMechDialog.labTough"), SwingConstants.RIGHT); //$NON-NLS-1$
-
-    private JTextField fldTough = new JTextField(3);
-
-    private JLabel labInit = new JLabel(
-            Messages.getString("CustomMechDialog.labInit"), SwingConstants.RIGHT); //$NON-NLS-1$
-
+    private final JTextField fldFatigue = new JTextField(3);
     private JTextField fldInit = new JTextField(3);
-
-    private JLabel labCommandInit = new JLabel(
-            Messages.getString("CustomMechDialog.labCommandInit"), SwingConstants.RIGHT); //$NON-NLS-1$
-
     private JTextField fldCommandInit = new JTextField(3);
-
-    private JLabel labCallsign = new JLabel(
-            Messages.getString("CustomMechDialog.labCallsign"), SwingConstants.CENTER); //$NON-NLS-1$
-
-    private JLabel labUnitNum = new JLabel(
-            Messages.getString("CustomMechDialog.labUnitNum"), SwingConstants.CENTER); //$NON-NLS-1$
-
-    private JComboBox<String> choUnitNum = new JComboBox<String>();
-
-    private ArrayList<Entity> entityUnitNum = new ArrayList<Entity>();
+    private JCheckBox chCommander = new JCheckBox();
 
     private JLabel labDeploymentRound = new JLabel(
             Messages.getString("CustomMechDialog.labDeployment"), SwingConstants.RIGHT); //$NON-NLS-1$
@@ -215,10 +158,11 @@ public class CustomMechDialog extends ClientDialog implements ActionListener,
 
     private JCheckBox chDeployHullDown = new JCheckBox();
 
-    private JLabel labCommander = new JLabel(
-            Messages.getString("CustomMechDialog.labCommander"), SwingConstants.RIGHT); //$NON-NLS-1$
+    private JLabel labHidden = new JLabel(
+            Messages.getString("CustomMechDialog.labHidden"), //$NON-NLS-1$
+            SwingConstants.RIGHT);
 
-    private JCheckBox chCommander = new JCheckBox();
+    private JCheckBox chHidden = new JCheckBox();
 
     private JLabel labOffBoard = new JLabel(
             Messages.getString("CustomMechDialog.labOffBoard"), SwingConstants.RIGHT); //$NON-NLS-1$
@@ -236,6 +180,16 @@ public class CustomMechDialog extends ClientDialog implements ActionListener,
     private JTextField fldOffBoardDistance = new JTextField(4);
 
     private JButton butOffBoardDistance = new JButton("0");
+    
+    private JLabel labStartingMode = new JLabel(
+            Messages.getString("CustomMechDialog.labStartingMode"), SwingConstants.RIGHT); //$NON-NLS-1$
+    
+    private JComboBox<String> choStartingMode = new JComboBox<>();
+       
+    private JLabel labCurrentFuel = new JLabel(
+            Messages.getString("CustomMechDialog.labCurrentFuel"), SwingConstants.RIGHT); //$NON-NLS-1$
+    
+    private JTextField fldCurrentFuel = new JTextField(7);
 
     private JLabel labStartVelocity = new JLabel(
             Messages.getString("CustomMechDialog.labStartVelocity"), SwingConstants.RIGHT); //$NON-NLS-1$
@@ -251,14 +205,10 @@ public class CustomMechDialog extends ClientDialog implements ActionListener,
             Messages.getString("CustomMechDialog.labStartHeight"), SwingConstants.RIGHT); //$NON-NLS-1$
 
     private JTextField fldStartHeight = new JTextField(3);
+    
+    private JCheckBox chDeployAirborne = new JCheckBox();
 
     private JPanel panButtons = new JPanel();
-
-    private JButton butRandomName = new JButton(
-            Messages.getString("CustomMechDialog.RandomName")); //$NON-NLS-1$
-
-    private JButton butRandomSkill = new JButton(
-            Messages.getString("CustomMechDialog.RandomSkill")); //$NON-NLS-1$
 
     private JButton butOkay = new JButton(Messages.getString("Okay")); //$NON-NLS-1$
 
@@ -272,9 +222,11 @@ public class CustomMechDialog extends ClientDialog implements ActionListener,
 
     private JPanel panEquip = new JPanel();
 
-    Entity entity;
+    private List<Entity> entities;
 
     private boolean okay;
+
+    private int status = CustomMechDialog.DONE;
 
     ClientGUI clientgui;
 
@@ -298,60 +250,115 @@ public class CustomMechDialog extends ClientDialog implements ActionListener,
     private OffBoardDirection direction = OffBoardDirection.NONE;
 
     private int distance = 17;
-
-    private JButton butPortrait;
-    PortraitChoiceDialog portraitDialog;
+    
+    private int fuel = 0;
 
     /**
      * Creates new CustomMechDialog
      */
-    public CustomMechDialog(ClientGUI clientgui, Client client, Entity entity,
+    public CustomMechDialog(ClientGUI clientgui, Client client, List<Entity> entities,
             boolean editable) {
         super(clientgui.frame,
                 Messages.getString("CustomMechDialog.title"), true); //$NON-NLS-1$
 
-        this.entity = entity;
+        this.entities = entities;
         this.clientgui = clientgui;
         this.client = client;
+
+        // Ensure we have at least one passed entity
+        //  Anything less makes no sense
+        if (entities.size() < 1) {
+            throw new IllegalStateException("Must pass at least one Entity!");
+        }
+
+        boolean multipleEntities = entities.size() > 1;
+        boolean quirksEnabled = clientgui.getClient().getGame().getOptions()
+                .booleanOption(OptionsConstants.ADVANCED_STRATOPS_QUIRKS);
+        boolean partialRepairsEnabled = clientgui.getClient().getGame()
+                .getOptions().booleanOption(OptionsConstants.ADVANCED_STRATOPS_PARTIALREPAIRS);
+        final Entity entity = entities.get(0);
+        boolean isAero = true;
+        boolean isMech = true;
+        boolean isShip = true;
+        boolean isVTOL = true;
+        boolean isWiGE = true;
+        boolean isQuadVee = true;
+        boolean isLAM = true;
+        boolean isGlider = true;
+        boolean eligibleForOffBoard = true;
+        
+        for (Entity e : entities) {
+            isAero &= (e instanceof Aero) && !((e instanceof SmallCraft) || (e instanceof Jumpship));
+            isMech &= (e instanceof Mech);
+            isShip &= (e instanceof SmallCraft) || (e instanceof Jumpship);
+            isVTOL &= (e instanceof VTOL);
+            isWiGE &= (e instanceof Tank) && (e.getMovementMode() == EntityMovementMode.WIGE);
+            isQuadVee &= (e instanceof QuadVee);
+            isLAM &= (e instanceof LandAirMech);
+            isGlider &= (e instanceof Protomech) && (e.getMovementMode() == EntityMovementMode.WIGE);
+            boolean entityEligibleForOffBoard = false;
+            boolean space = clientgui.getClient().getMapSettings().getMedium() == Board.T_SPACE;
+            //TODO: This check is good for now, but at some point we want atmospheric flying droppers to be able to lob
+            // offboard missiles and we could use it in space for extreme range bearings-only fights, plus Ortillery. 
+            if (!space && e.getAltitude() == 0) {
+                // No need to bother checking weapons if the map and entity don't meet criteria for offboard units
+                for (Mounted mounted : e.getWeaponList()) {
+                    WeaponType wtype = (WeaponType) mounted.getType();
+                    if (wtype.hasFlag(WeaponType.F_ARTILLERY)
+                            || wtype instanceof CapitalMissileBayWeapon) {
+                        entityEligibleForOffBoard = true;
+                        break;
+                    }
+                }
+            }
+            eligibleForOffBoard &= entityEligibleForOffBoard;
+        }
 
         // set up the panels
         JPanel mainPanel = new JPanel(new GridBagLayout());
         tabAll = new JTabbedPane();
-
-        panPilot = new JPanel(new GridBagLayout());
+        
+        JPanel panCrew = new JPanel(new GridBagLayout());
+        panCrewMember = new CustomPilotView[entity.getCrew().getSlotCount()];
+        for (int i = 0; i < panCrewMember.length; i++) {
+            panCrewMember[i] = new CustomPilotView(this, entity, i, editable);
+        }
         panDeploy = new JPanel(new GridBagLayout());
         quirks = entity.getQuirks();
         panQuirks = new QuirksPanel(entity, quirks, editable, this, h_wpnQuirks);
         panPartReps = new JPanel(new GridBagLayout());
         setupEquip();
-
-        scrPilot = new JScrollPane(panPilot);
-        scrEquip = new JScrollPane(panEquip);
-        scrDeploy = new JScrollPane(panDeploy);
-        scrQuirks = new JScrollPane(panQuirks);
-        scrPartreps = new JScrollPane(panPartReps);
-
-        panOptions = new JPanel(new GridBagLayout());
-
+        
         mainPanel.add(tabAll,
                 GBC.eol().fill(GridBagConstraints.BOTH).insets(5, 5, 5, 5));
         mainPanel.add(panButtons, GBC.eol().anchor(GridBagConstraints.CENTER));
 
-        tabAll.addTab(Messages.getString("CustomMechDialog.tabPilot"), scrPilot);
-        tabAll.addTab(Messages.getString("CustomMechDialog.tabEquipment"),
-                scrEquip);
+        JScrollPane scrEquip = new JScrollPane(panEquip);
+        if (!multipleEntities) {
+            if (panCrewMember.length > 1) {
+                for (int i = 0; i < panCrewMember.length; i++) {
+                    tabAll.addTab(entity.getCrew().getCrewType().getRoleName(i),
+                            new JScrollPane(panCrewMember[i]));
+                }
+                tabAll.addTab(Messages.getString("CustomMechDialog.tabCrew"), new JScrollPane(panCrew));
+            } else {
+                panCrew.add(panCrewMember[0], GBC.eop());
+                tabAll.addTab(Messages.getString("CustomMechDialog.tabPilot"), new JScrollPane(panCrew));
+            }
+            tabAll.addTab(Messages.getString("CustomMechDialog.tabEquipment"),
+                    scrEquip);
+        }
         tabAll.addTab(Messages.getString("CustomMechDialog.tabDeployment"),
-                scrDeploy);
-        if (clientgui.getClient().getGame().getOptions()
-                .booleanOption("stratops_quirks")) {
+                new JScrollPane(panDeploy));
+        if (quirksEnabled && !multipleEntities) {
+            JScrollPane scrQuirks = new JScrollPane(panQuirks);
             scrQuirks.setPreferredSize(scrEquip.getPreferredSize());
             tabAll.addTab("Quirks", scrQuirks);
         }
-        if (clientgui.getClient().getGame().getOptions()
-                .booleanOption("stratops_partialrepairs")) {
+        if (partialRepairsEnabled && !multipleEntities) {
             tabAll.addTab(
                     Messages.getString("CustomMechDialog.tabPartialRepairs"),
-                    scrPartreps);
+                    new JScrollPane(panPartReps));
         }
         getContentPane().add(mainPanel);
 
@@ -367,182 +374,85 @@ public class CustomMechDialog extends ClientDialog implements ActionListener,
             }
         }
         this.editable = editable;
-
-        // **PILOT TAB**/
-        if (entity instanceof Tank) {
-            labPiloting.setText(Messages
-                    .getString("CustomMechDialog.labDriving"));
-        } else if (entity instanceof Infantry) {
-            labPiloting.setText(Messages
-                    .getString("CustomMechDialog.labAntiMech"));
-        } else {
-            labPiloting.setText(Messages
-                    .getString("CustomMechDialog.labPiloting"));
+        
+        // **CREW TAB**//
+        if (clientgui.getClient().getGame().getOptions().booleanOption(OptionsConstants.ADVANCED_TACOPS_FATIGUE)) {
+            panCrew.add(new JLabel(Messages.getString("CustomMechDialog.labFatigue"), SwingConstants.RIGHT),
+                    GBC.std()); //$NON-NLS-1$
+            panCrew.add(fldFatigue, GBC.eop());
+            fldFatigue.setToolTipText(Messages.getString("CustomMechDialog.labFatigueToolTip"));
         }
+        fldFatigue.setText(Integer.toString(entity.getCrew().getFatigue()));
 
-        butPortrait = new JButton();
-        butPortrait.setPreferredSize(new Dimension(72, 72));
-        butPortrait.setText(Messages.getString("CustomMechDialog.labPortrait"));
-        butPortrait.setActionCommand("portrait"); //$NON-NLS-1$
-        butPortrait.addActionListener(new ActionListener() {
-            public void actionPerformed(ActionEvent e) {
-                portraitDialog.setVisible(true);
-            }
-        });
-        portraitDialog = new PortraitChoiceDialog(clientgui.getFrame(),
-                butPortrait);
-        portraitDialog.setPilot(entity.getCrew());
-
-        panPilot.add(butPortrait, GBC.std().gridheight(2));
-        panPilot.add(butRandomName, GBC.eop());
-        panPilot.add(butRandomSkill, GBC.eop());
-
-        panPilot.add(labName, GBC.std());
-        panPilot.add(fldName, GBC.eol());
-
-        panPilot.add(labNick, GBC.std());
-        panPilot.add(fldNick, GBC.eop());
-
-        if (client.getGame().getOptions().booleanOption("rpg_gunnery")) {
-
-            panPilot.add(labGunneryL, GBC.std());
-            panPilot.add(fldGunneryL, GBC.eol());
-
-            panPilot.add(labGunneryM, GBC.std());
-            panPilot.add(fldGunneryM, GBC.eol());
-
-            panPilot.add(labGunneryB, GBC.std());
-            panPilot.add(fldGunneryB, GBC.eol());
-
-        } else {
-            panPilot.add(labGunnery, GBC.std());
-            panPilot.add(fldGunnery, GBC.eol());
+        if (clientgui.getClient().getGame().getOptions()
+                .booleanOption(OptionsConstants.RPG_INDIVIDUAL_INITIATIVE)) {
+            panCrew.add(new JLabel(Messages.getString("CustomMechDialog.labInit"), SwingConstants.RIGHT),
+                    GBC.std()); //$NON-NLS-1$
+            panCrew.add(fldInit, GBC.eop());
         }
+        fldInit.setText(Integer.toString(entity.getCrew().getInitBonus()));
 
-        panPilot.add(labPiloting, GBC.std());
-        panPilot.add(fldPiloting, GBC.eop());
-
-        if (client.getGame().getOptions().booleanOption("artillery_skill")) {
-            panPilot.add(labArtillery, GBC.std());
-            panPilot.add(fldArtillery, GBC.eop());
+        if (clientgui.getClient().getGame().getOptions().booleanOption(OptionsConstants.RPG_COMMAND_INIT)) {
+            panCrew.add(new JLabel(Messages.getString("CustomMechDialog.labCommandInit"), SwingConstants.RIGHT),
+                    GBC.std()); //$NON-NLS-1$
+            panCrew.add(fldCommandInit, GBC.eop());
         }
-
-        if (client.getGame().getOptions().booleanOption("tacops_fatigue")) {
-            labFatigue.setToolTipText(Messages
-                    .getString("CustomMechDialog.labFatigueToolTip"));
-            panPilot.add(labFatigue, GBC.std());
-            panPilot.add(fldFatigue, GBC.eop());
-        }
-
-        if (client.getGame().getOptions().booleanOption("toughness")) {
-            panPilot.add(labTough, GBC.std());
-            panPilot.add(fldTough, GBC.eop());
-        }
-
-        if (client.getGame().getOptions()
-                .booleanOption("individual_initiative")) {
-            panPilot.add(labInit, GBC.std());
-            panPilot.add(fldInit, GBC.eop());
-        }
-
-        if (client.getGame().getOptions().booleanOption("command_init")) {
-            panPilot.add(labCommandInit, GBC.std());
-            panPilot.add(fldCommandInit, GBC.eop());
-        }
+        fldCommandInit.setText(Integer.toString(entity.getCrew()
+                .getCommandBonus()));
 
         // Set up commanders for commander killed victory condition
         if (clientgui.getClient().getGame().getOptions()
-                .booleanOption("commander_killed")) { //$NON-NLS-1$
-            panPilot.add(labCommander, GBC.std());
-            panPilot.add(chCommander, GBC.eol());
+                .booleanOption(OptionsConstants.VICTORY_COMMANDER_KILLED)) { //$NON-NLS-1$
+            panCrew.add(new JLabel(Messages.getString("CustomMechDialog.labCommander"), SwingConstants.RIGHT),
+                    GBC.std()); //$NON-NLS-1$
+            panCrew.add(chCommander, GBC.eol());
             chCommander.setSelected(entity.isCommander());
         }
-
-        if (entity instanceof Protomech) {
-            // All Protomechs have a callsign.
-            StringBuffer callsign = new StringBuffer(
-                    Messages.getString("CustomMechDialog.Callsign")); //$NON-NLS-1$
-            callsign.append(": "); //$NON-NLS-1$
-            callsign.append(
-                    (this.entity.getUnitNumber() + PreferenceManager
-                            .getClientPreferences().getUnitStartChar()))
-                    .append('-').append(this.entity.getId());
-            labCallsign.setText(callsign.toString());
-            panPilot.add(labCallsign,
-                    GBC.eol().anchor(GridBagConstraints.CENTER));
-
-            // Get the Protomechs of this entity's player
-            // that *aren't* in the entity's unit.
-            Iterator<Entity> otherUnitEntities = client.getGame()
-                    .getSelectedEntities(new EntitySelector() {
-                        private final int ownerId = CustomMechDialog.this.entity
-                                .getOwnerId();
-
-                        private final short unitNumber = CustomMechDialog.this.entity
-                                .getUnitNumber();
-
-                        public boolean accept(Entity unitEntity) {
-                            if ((unitEntity instanceof Protomech)
-                                    && (ownerId == unitEntity.getOwnerId())
-                                    && (unitNumber != unitEntity
-                                            .getUnitNumber())) {
-                                return true;
-                            }
-                            return false;
-                        }
-                    });
-
-            // If we got any other entites, show the unit number controls.
-            if (otherUnitEntities.hasNext()) {
-                panPilot.add(labUnitNum, GBC.std());
-                panPilot.add(choUnitNum, GBC.eop());
-                refreshUnitNum(otherUnitEntities);
-            }
-        }
-
-        if (clientgui.getClient().getGame().getOptions()
-                .booleanOption("pilot_advantages") //$NON-NLS-1$
-                || clientgui.getClient().getGame().getOptions()
-                        .booleanOption("edge") //$NON-NLS-1$
-                || clientgui.getClient().getGame().getOptions()
-                        .booleanOption("manei_domini")) { //$NON-NLS-1$
-
-            panPilot.add(panOptions, GBC.eop());
-        }
+        panOptions = new JPanel(new GridBagLayout());
+        panCrew.add(panOptions, GBC.eop());
 
         // **DEPLOYMENT TAB**//
-        boolean eligibleForOffBoard = false;
-        for (Mounted mounted : entity.getWeaponList()) {
-            WeaponType wtype = (WeaponType) mounted.getType();
-            if (wtype.hasFlag(WeaponType.F_ARTILLERY)) {
-                eligibleForOffBoard = true;
-            }
+        
+        if (isQuadVee || isLAM) {
+            panDeploy.add(labStartingMode, GBC.std());
+            panDeploy.add(choStartingMode, GBC.eol());
+            choStartingMode.addItemListener(this);
+            labStartingMode.setToolTipText(Messages
+                    .getString("CustomMechDialog.startingModeToolTip")); //$NON-NLS-1$
+            choStartingMode.setToolTipText(Messages
+                    .getString("CustomMechDialog.startingModeToolTip")); //$NON-NLS-1$
+            refreshDeployment();
+            // Disable conversions for loaded units so we don't get fighter LAMs in mech bays and vice-versa
+            choStartingMode.setEnabled(entities.get(0).getTransportId() == Entity.NONE);
         }
-
-        if (entity instanceof Aero) {
+        if (isVTOL || isLAM || isGlider) {
+            panDeploy.add(labStartHeight, GBC.std());
+            panDeploy.add(fldStartHeight, GBC.eol());
+        }
+        if (isWiGE) {
+            panDeploy.add(new JLabel(Messages.getString(
+                    "CustomMechDialog.labDeployAirborne"), SwingConstants.RIGHT), GBC.std()); //$NON-NLS-1$
+            panDeploy.add(chDeployAirborne, GBC.eol());
+        }
+        if (isAero || isLAM || isShip) {
             panDeploy.add(labStartVelocity, GBC.std());
             panDeploy.add(fldStartVelocity, GBC.eol());
 
             panDeploy.add(labStartAltitude, GBC.std());
             panDeploy.add(fldStartAltitude, GBC.eol());
-        }
-        if (entity instanceof VTOL) {
-            panDeploy.add(labStartHeight, GBC.std());
-            panDeploy.add(fldStartHeight, GBC.eol());
+                        
+            panDeploy.add(labCurrentFuel, GBC.std());
+            panDeploy.add(fldCurrentFuel, GBC.eol());
         }
 
         choDeploymentRound.addItemListener(this);
-        labDeploymentZone.setToolTipText(Messages
-                .getString("CustomMechDialog.deployZoneToolTip")); //$NON-NLS-1$
-        choDeploymentZone.setToolTipText(Messages
-                .getString("CustomMechDialog.deployZoneToolTip")); //$NON-NLS-1$
 
         panDeploy.add(labDeploymentRound, GBC.std());
         panDeploy.add(choDeploymentRound, GBC.eol());
         panDeploy.add(labDeploymentZone, GBC.std());
         panDeploy.add(choDeploymentZone, GBC.eol());
         if (clientgui.getClient().getGame().getOptions()
-                .booleanOption("begin_shutdown")
+                .booleanOption(OptionsConstants.RPG_BEGIN_SHUTDOWN)
                 && !(entity instanceof Infantry)
                 && !(entity instanceof GunEmplacement)) {
             panDeploy.add(labDeployShutdown, GBC.std());
@@ -550,7 +460,7 @@ public class CustomMechDialog extends ClientDialog implements ActionListener,
             chDeployShutdown.setSelected(entity.isManualShutdown());
         }
 
-        if (entity instanceof Mech) {
+        if (isMech) {
             panDeploy.add(labDeployHullDown, GBC.std());
             panDeploy.add(chDeployHullDown, GBC.eol());
             chDeployHullDown.setSelected(entity.isHullDown()
@@ -565,6 +475,13 @@ public class CustomMechDialog extends ClientDialog implements ActionListener,
 
         refreshDeployment();
 
+        if (clientgui.getClient().getGame().getOptions()
+                .booleanOption(OptionsConstants.ADVANCED_HIDDEN_UNITS)) {
+            panDeploy.add(labHidden, GBC.std());
+            panDeploy.add(chHidden, GBC.eol());
+            chHidden.setSelected(entity.isHidden());
+        }
+        
         if (eligibleForOffBoard) {
             panDeploy.add(labOffBoard, GBC.std());
             panDeploy.add(chOffBoard, GBC.eol());
@@ -596,72 +513,48 @@ public class CustomMechDialog extends ClientDialog implements ActionListener,
 
         setupButtons();
 
-        fldName.setText(entity.getCrew().getName());
-        fldName.addActionListener(this);
-        fldNick.setText(entity.getCrew().getNickname());
-        fldNick.addActionListener(this);
-        fldGunnery.setText(Integer.toString(entity.getCrew().getGunnery()));
-        fldGunnery.addActionListener(this);
-        fldGunneryL.setText(Integer.toString(entity.getCrew().getGunneryL()));
-        fldGunneryL.addActionListener(this);
-        fldGunneryM.setText(Integer.toString(entity.getCrew().getGunneryM()));
-        fldGunneryM.addActionListener(this);
-        fldGunneryB.setText(Integer.toString(entity.getCrew().getGunneryB()));
-        fldGunneryB.addActionListener(this);
-        fldPiloting.setText(Integer.toString(entity.getCrew().getPiloting()));
-        fldPiloting.addActionListener(this);
-        fldArtillery.setText(Integer.toString(entity.getCrew().getArtillery()));
-        fldArtillery.addActionListener(this);
-        fldFatigue.setText(Integer.toString(entity.getCrew().getFatigue()));
-        fldFatigue.setToolTipText(Messages
-                .getString("CustomMechDialog.labFatigueToolTip"));
-        fldFatigue.addActionListener(this);
-        fldTough.setText(Integer.toString(entity.getCrew().getToughness()));
-        fldTough.addActionListener(this);
-        fldInit.setText(Integer.toString(entity.getCrew().getInitBonus()));
-        fldInit.addActionListener(this);
-        fldCommandInit.setText(Integer.toString(entity.getCrew()
-                .getCommandBonus()));
-        fldCommandInit.addActionListener(this);
-        if (entity instanceof Aero) {
-            Aero a = (Aero) entity;
-            fldStartVelocity.setText(new Integer(a.getCurrentVelocity())
+        if (isAero || isLAM || isShip) {
+            IAero a = (IAero) entity;
+            fldStartVelocity.setText(Integer.valueOf(a.getCurrentVelocity())
                     .toString());
             fldStartVelocity.addActionListener(this);
 
-            fldStartAltitude.setText(new Integer(a.getAltitude()).toString());
+            fldStartAltitude.setText(Integer.valueOf(entity.getAltitude()).toString());
             fldStartAltitude.addActionListener(this);
+            
+            fuel = a.getFuel();
+            fldCurrentFuel.setText(Integer.valueOf(a.getCurrentFuel())
+                    .toString());
+            fldCurrentFuel.addActionListener(this);
         }
-        if (entity instanceof VTOL) {
-            VTOL v = (VTOL) entity;
-            fldStartHeight.setText(new Integer(v.getElevation()).toString());
+
+        if (isVTOL || isLAM || isGlider) {
+            fldStartHeight.setText(Integer.valueOf(entity.getElevation()).toString());
             fldStartHeight.addActionListener(this);
+        }
+        if (isWiGE) {
+            chDeployAirborne.setSelected(entity.getElevation() > 0);
         }
 
         if (!editable) {
-            fldName.setEnabled(false);
-            fldNick.setEnabled(false);
-            fldGunnery.setEnabled(false);
-            fldGunneryL.setEnabled(false);
-            fldGunneryM.setEnabled(false);
-            fldGunneryB.setEnabled(false);
-            fldPiloting.setEnabled(false);
-            fldArtillery.setEnabled(false);
             fldFatigue.setEnabled(false);
-            fldTough.setEnabled(false);
             fldInit.setEnabled(false);
             fldCommandInit.setEnabled(false);
+            chCommander.setEnabled(false);
             choDeploymentRound.setEnabled(false);
             chDeployShutdown.setEnabled(false);
             chDeployProne.setEnabled(false);
             chDeployHullDown.setEnabled(false);
             chCommander.setEnabled(false);
+            chHidden.setEnabled(false);
             chOffBoard.setEnabled(false);
             choOffBoardDirection.setEnabled(false);
             fldOffBoardDistance.setEnabled(false);
             fldStartVelocity.setEnabled(false);
             fldStartAltitude.setEnabled(false);
+            fldCurrentFuel.setEnabled(false);
             fldStartHeight.setEnabled(false);
+            chDeployAirborne.setEnabled(false);
             m_equip.initialize();
         }
 
@@ -679,13 +572,29 @@ public class CustomMechDialog extends ClientDialog implements ActionListener,
         setLocationRelativeTo(clientgui);
     }
 
+    public String getSelectedTab() {
+        return tabAll.getTitleAt(tabAll.getSelectedIndex());
+    }
+
+    public void setSelectedTab(int idx) {
+        if (idx < tabAll.getTabCount()) {
+            tabAll.setSelectedIndex(idx);
+        }
+    }
+    
+    public void setSelectedTab(String tabName) {
+        for (int i = 0; i < tabAll.getTabCount(); i++) {
+            if (tabAll.getTitleAt(i).equals(tabName)) {
+                tabAll.setSelectedIndex(i);
+            }
+        }
+    }
+
     private void setupButtons() {
         butOkay.addActionListener(this);
         butCancel.addActionListener(this);
         butNext.addActionListener(this);
         butPrev.addActionListener(this);
-        butRandomSkill.addActionListener(this);
-        butRandomName.addActionListener(this);
 
         // layout
         panButtons.setLayout(new GridLayout(1, 4, 10, 0));
@@ -699,6 +608,7 @@ public class CustomMechDialog extends ClientDialog implements ActionListener,
     }
 
     private void setOptions() {
+        Entity entity = entities.get(0);
         IOption option;
         for (final Object newVar : optionComps) {
             DialogOptionComponent comp = (DialogOptionComponent) newVar;
@@ -733,24 +643,25 @@ public class CustomMechDialog extends ClientDialog implements ActionListener,
 
             if (group.getKey().equalsIgnoreCase(PilotOptions.LVL3_ADVANTAGES)
                     && !clientgui.getClient().getGame().getOptions()
-                            .booleanOption("pilot_advantages")) {
+                            .booleanOption(OptionsConstants.RPG_PILOT_ADVANTAGES)) {
                 continue;
             }
 
             if (group.getKey().equalsIgnoreCase(PilotOptions.EDGE_ADVANTAGES)
                     && !clientgui.getClient().getGame().getOptions()
-                            .booleanOption("edge")) {
+                            .booleanOption(OptionsConstants.EDGE)) {
                 continue;
             }
 
             if (group.getKey().equalsIgnoreCase(PilotOptions.MD_ADVANTAGES)
                     && !clientgui.getClient().getGame().getOptions()
-                            .booleanOption("manei_domini")) {
+                            .booleanOption(OptionsConstants.RPG_MANEI_DOMINI)) {
                 continue;
             }
 
             addGroup(group, gridbag, c);
 
+            Entity entity = entities.get(0);
             for (Enumeration<IOption> j = group.getOptions(); j
                     .hasMoreElements();) {
                 IOption option = j.nextElement();
@@ -761,18 +672,18 @@ public class CustomMechDialog extends ClientDialog implements ActionListener,
 
                 // a bunch of stuf should get disabled for conv infantry
                 if ((((entity instanceof Infantry) && !(entity instanceof BattleArmor)))
-                        && (option.getName().equals("vdni") || option.getName()
-                                .equals("bvdni"))) {
+                        && (option.getName().equals(OptionsConstants.MD_VDNI) || option.getName()
+                                .equals(OptionsConstants.MD_BVDNI))) {
                     continue;
                 }
 
                 // a bunch of stuff should get disabled for all but conventional
                 // infantry
                 if (!((entity instanceof Infantry) && !(entity instanceof BattleArmor))
-                        && (option.getName().equals("grappler")
-                                || option.getName().equals("pl_masc")
-                                || option.getName().equals("cyber_eye_im") || option
-                                .getName().equals("cyber_eye_tele"))) {
+                        && (option.getName().equals(OptionsConstants.MD_PL_ENHANCED)
+                                || option.getName().equals(OptionsConstants.MD_PL_MASC)
+                                || option.getName().equals(OptionsConstants.MD_CYBER_IMP_AUDIO) || option
+                                .getName().equals(OptionsConstants.MD_CYBER_IMP_VISUAL))) {
                     continue;
                 }
 
@@ -784,6 +695,7 @@ public class CustomMechDialog extends ClientDialog implements ActionListener,
     }
 
     private void setPartReps() {
+        Entity entity = entities.get(0);
         IOption option;
         for (final Object newVar : partRepsComps) {
             DialogOptionComponent comp = (DialogOptionComponent) newVar;
@@ -804,6 +716,7 @@ public class CustomMechDialog extends ClientDialog implements ActionListener,
     }
 
     public void refreshPartReps() {
+        Entity entity = entities.get(0);
         panPartReps.removeAll();
         partRepsComps = new ArrayList<DialogOptionComponent>();
         for (Enumeration<IOptionGroup> i = partReps.getGroups(); i
@@ -837,12 +750,11 @@ public class CustomMechDialog extends ClientDialog implements ActionListener,
         panOptions.add(groupLabel);
     }
 
-    private void addOption(IOption option, GridBagLayout gridbag,
-            GridBagConstraints c, boolean editable) {
-        DialogOptionComponent optionComp = new DialogOptionComponent(this,
-                option, editable);
+    private void addOption(IOption option, GridBagLayout gridbag, GridBagConstraints c, boolean editable) {
+        Entity entity = entities.get(0);
+        DialogOptionComponent optionComp = new DialogOptionComponent(this, option, editable);
 
-        if ("weapon_specialist".equals(option.getName())) { //$NON-NLS-1$
+        if ((OptionsConstants.GUNNERY_WEAPON_SPECIALIST).equals(option.getName())) { // $NON-NLS-1$
             optionComp.addValue(Messages.getString("CustomMechDialog.None")); //$NON-NLS-1$
             TreeSet<String> uniqueWeapons = new TreeSet<String>();
             for (int i = 0; i < entity.getWeaponList().size(); i++) {
@@ -855,11 +767,29 @@ public class CustomMechDialog extends ClientDialog implements ActionListener,
             optionComp.setSelected(option.stringValue());
         }
 
-        if ("specialist".equals(option.getName())) { //$NON-NLS-1$
+        if (OptionsConstants.GUNNERY_SPECIALIST               
+                .equals(option.getName())) { //$NON-NLS-1$
             optionComp.addValue(Crew.SPECIAL_NONE);
-            optionComp.addValue(Crew.SPECIAL_LASER);
+            optionComp.addValue(Crew.SPECIAL_ENERGY);
             optionComp.addValue(Crew.SPECIAL_BALLISTIC);
             optionComp.addValue(Crew.SPECIAL_MISSILE);
+            optionComp.setSelected(option.stringValue());
+        }
+
+        if (OptionsConstants.GUNNERY_RANGE_MASTER.equals(option.getName())) { //$NON-NLS-1$
+            optionComp.addValue(Crew.RANGEMASTER_NONE);
+            optionComp.addValue(Crew.RANGEMASTER_MEDIUM);
+            optionComp.addValue(Crew.RANGEMASTER_LONG);
+            optionComp.addValue(Crew.RANGEMASTER_EXTREME);
+            optionComp.setSelected(option.stringValue());
+        }
+
+        if (OptionsConstants.MISC_HUMAN_TRO.equals(option.getName())) { //$NON-NLS-1$
+            optionComp.addValue(Crew.HUMANTRO_NONE);
+            optionComp.addValue(Crew.HUMANTRO_MECH);
+            optionComp.addValue(Crew.HUMANTRO_AERO);
+            optionComp.addValue(Crew.HUMANTRO_VEE);
+            optionComp.addValue(Crew.HUMANTRO_BA);
             optionComp.setSelected(option.stringValue());
         }
 
@@ -878,14 +808,46 @@ public class CustomMechDialog extends ClientDialog implements ActionListener,
 
     public void optionClicked(DialogOptionComponent comp, IOption option,
             boolean state) {
-        // TODO : implement me!!!
     }
 
     public boolean isOkay() {
         return okay;
     }
 
+    public int getStatus() {
+        return status;
+    }
+
     private void refreshDeployment() {
+        Entity entity = entities.get(0);
+        
+        if (entity instanceof QuadVee) {
+            choStartingMode.removeItemListener(this);
+            choStartingMode.removeAllItems();
+            choStartingMode.addItem(Messages.getString("CustomMechDialog.ModeQuad"));
+            choStartingMode.addItem(Messages.getString("CustomMechDialog.ModeVehicle"));
+            if (entity.getConversionMode() == QuadVee.CONV_MODE_VEHICLE) {
+                choStartingMode.setSelectedIndex(1);
+            }
+            updateStartingModeOptions();
+            choStartingMode.addItemListener(this);
+        } else if (entity instanceof LandAirMech) {
+            choStartingMode.removeItemListener(this);
+            choStartingMode.removeAllItems();
+            choStartingMode.addItem(Messages.getString("CustomMechDialog.ModeBiped"));
+            if (((LandAirMech)entity).getLAMType() != LandAirMech.LAM_BIMODAL) {
+                choStartingMode.addItem(Messages.getString("CustomMechDialog.ModeAirMech"));
+            }
+            choStartingMode.addItem(Messages.getString("CustomMechDialog.ModeFighter"));
+            if (entity.getConversionMode() == LandAirMech.CONV_MODE_AIRMECH) {
+                choStartingMode.setSelectedIndex(1);
+            } else if (entity.getConversionMode() == LandAirMech.CONV_MODE_FIGHTER) {
+                choStartingMode.setSelectedIndex(choStartingMode.getItemCount() - 1);
+            }
+            updateStartingModeOptions();
+            choStartingMode.addItemListener(this);
+        }
+        
         choDeploymentRound.removeItemListener(this);
         
         choDeploymentRound.removeAllItems();
@@ -942,74 +904,82 @@ public class CustomMechDialog extends ClientDialog implements ActionListener,
         choDeploymentZone.setSelectedIndex(entity.getStartingPos(false) + 1);
         
         choDeploymentRound.addItemListener(this);
-    }
 
-    /**
-     * Populate the list of entities in other units from the given enumeration.
-     *
-     * @param others
-     *            the <code>Enumeration</code> containing entities in other
-     *            units.
-     */
-    private void refreshUnitNum(Iterator<Entity> others) {
-        // Clear the list of old values
-        choUnitNum.removeAllItems();
-        entityUnitNum.clear();
-
-        // Make an entry for "no change".
-        choUnitNum.addItem(Messages
-                .getString("CustomMechDialog.doNotSwapUnits")); //$NON-NLS-1$
-        entityUnitNum.add(entity);
-
-        // Walk through the other entities.
-        while (others.hasNext()) {
-            // Track the position of the next other entity.
-            final Entity other = others.next();
-            entityUnitNum.add(other);
-
-            // Show the other entity's name and callsign.
-            StringBuffer callsign = new StringBuffer(other.getDisplayName());
-            callsign.append(" (")//$NON-NLS-1$
-                    .append((other.getUnitNumber() + PreferenceManager
-                            .getClientPreferences().getUnitStartChar()))
-                    .append('-').append(other.getId()).append(')');
-            choUnitNum.addItem(callsign.toString());
+        chHidden.removeActionListener(this);
+        boolean enableHidden = true;
+        // Airborne units can't be hidden
+        if (entity.isAirborne() || entity.isAirborneVTOLorWIGE()) {
+            enableHidden = false;
         }
-        choUnitNum.setSelectedIndex(0);
+        // Landed dropships can't be hidden
+        if ((entity instanceof Dropship)) {
+            enableHidden = false;
+        }
+        labHidden.setEnabled(enableHidden);
+        chHidden.setEnabled(enableHidden);
+        chHidden.addActionListener(this);
     }
 
     public void actionPerformed(ActionEvent actionEvent) {
 
-        if (actionEvent.getSource().equals(butRandomSkill)) {
-            int[] skills = client.getRandomSkillsGenerator().getRandomSkills(
-                    entity);
-            fldGunnery.setText(Integer.toString(skills[0]));
-            fldPiloting.setText(Integer.toString(skills[1]));
-            return;
-        }
-        if (actionEvent.getSource().equals(butRandomName)) {
-            fldName.setText(client.getRandomNameGenerator().generate());
-            return;
-        }
         if (actionEvent.getSource().equals(butOffBoardDistance)) {
-            int maxDistance = 19 * 17; // Long Tom
-            for (Mounted wep : entity.getWeaponList()) {
-                EquipmentType e = wep.getType();
-                WeaponType w = (WeaponType) e;
-                if (w.hasFlag(WeaponType.F_ARTILLERY)) {
-                    int nDistance = (w.getLongRange() - 1) * 17;
-                    if (nDistance < maxDistance) {
+            // We'll allow the player to deploy at the maximum possible
+            // effective range, even if many of the unit's weapons would be out of range
+            int maxDistance = 0;
+            for (Entity entity : entities) {
+                for (Mounted wep : entity.getWeaponList()) {
+                    EquipmentType e = wep.getType();
+                    WeaponType w = (WeaponType) e;
+                    int nDistance = 0;
+                    if (w.hasFlag(WeaponType.F_ARTILLERY)) {
+                        if (w instanceof ArtilleryBayWeapon) {
+                            // Artillery bays can mix and match, so limit the bay
+                            // to the shortest range of the weapons in it
+                            int bayShortestRange = 150; // Cruise missile/120
+                            for (int wId : wep.getBayWeapons()) {
+                                Mounted bweap = entity.getEquipment(wId);
+                                WeaponType bwtype = (WeaponType) bweap.getType();
+                                // Max TO range in mapsheets - 1 for the actual play area
+                                int currentDistance = (bwtype.getLongRange() - 1);
+                                if (currentDistance < bayShortestRange) {
+                                    bayShortestRange = currentDistance;
+                                }
+                            }
+                            nDistance = bayShortestRange;
+                        } else {
+                            // Max TO range in mapsheets - 1 for the actual play area
+                            nDistance = (w.getLongRange() - 1);
+                        }
+                    } else if (w.isCapital() || w.isSubCapital()) {
+                        // Capital weapons use their maximum space hex range as the mapsheet range
+                        if (w.getMaxRange(wep) == WeaponType.RANGE_EXT) {
+                            nDistance = 50;
+                        }
+                        if (w.getMaxRange(wep) == WeaponType.RANGE_LONG) {
+                            nDistance = 40;
+                        }
+                        if (w.getMaxRange(wep) == WeaponType.RANGE_MED) {
+                            nDistance = 24;
+                        }
+                        if (w.getMaxRange(wep) == WeaponType.RANGE_SHORT) {
+                            nDistance = 12;
+                        }
+                    }
+                    // Now, convert to mapsheets
+                    nDistance = nDistance * Board.DEFAULT_BOARD_HEIGHT;
+                    // And set our maximum slider hex distance based on the calculations
+                    if (nDistance > maxDistance) {
                         maxDistance = nDistance;
                     }
                 }
+                
             }
-            // int dist = Math.min(Math.max(entity.getOffBoardDistance(), 17),
-            // maxDistance);
             Slider sl = new Slider(
                     clientgui.frame,
                     Messages.getString("CustomMechDialog.offboardDistanceTitle"),
                     Messages.getString("CustomMechDialog.offboardDistanceQuestion"),
-                    Math.min(Math.max(entity.getOffBoardDistance(), 17),
+                    Math.min(
+                            Math.max(entities.get(0).getOffBoardDistance(), 17),
                             maxDistance), 17, maxDistance);
             if (!sl.showDialog()) {
                 return;
@@ -1018,179 +988,251 @@ public class CustomMechDialog extends ClientDialog implements ActionListener,
             butOffBoardDistance.setText(Integer.toString(distance));
             return;
         }
+        
+        if (actionEvent.getSource().equals(butCancel)) {
+            setVisible(false);
+            return;
+        }
+        
+        if (actionEvent.getSource().equals(chHidden)) {
+            return;
+        }
+        
+        if (actionEvent.getActionCommand().equals("missing")) {
+            //If we're down to a single crew member, do not allow any more to be removed.
+            final long remaining = Arrays.stream(panCrewMember).filter(p -> !p.getMissing()).count();
+            for (CustomPilotView v : panCrewMember) {
+                v.enableMissing(remaining > 1 || v.getMissing());
+            }
+            return;
+        }
 
-        if (!actionEvent.getSource().equals(butCancel)) {
-            // get values
-            String name = fldName.getText();
-            String nick = fldNick.getText();
-            int gunnery;
-            int gunneryL;
-            int gunneryM;
-            int gunneryB;
-            int artillery;
-            int fatigue = 0;
-            int piloting;
-            int tough = 0;
-            int init = 0;
-            int command = 0;
-            int velocity = 0;
-            int altitude = 0;
-            int height = 0;
-            int offBoardDistance;
-            String externalId = entity.getCrew().getExternalIdAsString();
-            try {
-                gunnery = Integer.parseInt(fldGunnery.getText());
-                gunneryL = Integer.parseInt(fldGunneryL.getText());
-                gunneryM = Integer.parseInt(fldGunneryM.getText());
-                gunneryB = Integer.parseInt(fldGunneryB.getText());
-                piloting = Integer.parseInt(fldPiloting.getText());
-                artillery = Integer.parseInt(fldArtillery.getText());
-                tough = Integer.parseInt(fldTough.getText());
-                init = Integer.parseInt(fldInit.getText());
-                fatigue = Integer.parseInt(fldFatigue.getText());
-                command = Integer.parseInt(fldCommandInit.getText());
-                if (entity instanceof Aero) {
-                    velocity = Integer.parseInt(fldStartVelocity.getText());
-                    altitude = Integer.parseInt(fldStartAltitude.getText());
-                }
-                if (entity instanceof VTOL) {
-                    height = Integer.parseInt(fldStartHeight.getText());
-                }
-            } catch (NumberFormatException e) {
-                JOptionPane
-                        .showMessageDialog(
-                                clientgui.frame,
-                                Messages.getString("CustomMechDialog.EnterValidSkills"), Messages.getString("CustomMechDialog.NumberFormatError"), JOptionPane.ERROR_MESSAGE); //$NON-NLS-1$ //$NON-NLS-2$
+        // Set instanceof flags
+        String msg, title;
+        boolean isAero = true;
+        boolean isShip = true;
+        boolean isVTOL = true;
+        boolean isWiGE = true;
+        boolean isQuadVee = true;
+        boolean isLAM = true;
+        boolean isAirMech = true;
+        boolean isGlider = true;
+        for (Entity e : entities) {
+            isAero &= ((e instanceof Aero) && !((e instanceof SmallCraft) || (e instanceof Jumpship)))
+                    || ((e instanceof LandAirMech)
+                        && (choStartingMode.getSelectedIndex() == 2
+                            || ((LandAirMech)e).getLAMType() == LandAirMech.LAM_BIMODAL
+                                && choStartingMode.getSelectedIndex() == 1));
+            isShip &= (e instanceof SmallCraft) || (e instanceof Jumpship);
+            isVTOL &= (e instanceof VTOL);
+            isWiGE &= (e instanceof Tank) && (e.getMovementMode() == EntityMovementMode.WIGE);
+            isQuadVee &= (e instanceof QuadVee);
+            isLAM &= (e instanceof LandAirMech);
+            isAirMech &= (e instanceof LandAirMech)
+                    && (((LandAirMech)e).getLAMType() == LandAirMech.LAM_STANDARD)
+                    && (choStartingMode.getSelectedIndex() == 1);
+            isGlider &= (e instanceof Protomech) && (e.getMovementMode() == EntityMovementMode.WIGE);
+        }
+
+        // get values
+        int fatigue = 0;
+        int init = 0;
+        int command = 0;
+        int velocity = 0;
+        int altitude = 0;
+        int currentfuel = 0;
+        int height = 0;
+        int offBoardDistance;
+        try {
+            init = Integer.parseInt(fldInit.getText());
+            fatigue = Integer.parseInt(fldFatigue.getText());
+            command = Integer.parseInt(fldCommandInit.getText());
+            if (isAero || isShip) {
+                velocity = Integer.parseInt(fldStartVelocity.getText());
+                altitude = Integer.parseInt(fldStartAltitude.getText());
+                currentfuel = Integer.parseInt(fldCurrentFuel.getText());
+            }
+            if (isVTOL || isAirMech) {
+                height = Integer.parseInt(fldStartHeight.getText());
+            }
+            if (isWiGE) {
+                height = chDeployAirborne.isSelected()? 1 : 0;
+            }
+        } catch (NumberFormatException e) {
+            msg = Messages.getString("CustomMechDialog.EnterValidSkills"); //$NON-NLS-1$
+            title = Messages.getString("CustomMechDialog.NumberFormatError"); //$NON-NLS-1$
+            JOptionPane.showMessageDialog(clientgui.frame, msg, title,
+                    JOptionPane.ERROR_MESSAGE);
+            return;
+        }
+        
+        if (isAero || isShip) {
+            if ((velocity > (2 * entities.get(0).getWalkMP()))
+                    || (velocity < 0)) {
+                msg = Messages
+                        .getString("CustomMechDialog.EnterCorrectVelocity"); //$NON-NLS-1$
+                title = Messages
+                        .getString("CustomMechDialog.NumberFormatError"); //$NON-NLS-1$
+                JOptionPane.showMessageDialog(clientgui.frame, msg, title,
+                        JOptionPane.ERROR_MESSAGE);
                 return;
             }
-
-            // keep these reasonable, please
-            if ((gunnery < 0) || (gunnery > 8) || (piloting < 0)
-                    || (piloting > 8) || (gunneryL < 0) || (gunneryL > 8)
-                    || (gunneryM < 0) || (gunneryM > 8) || (gunneryB < 0)
-                    || (gunneryB > 8) || (artillery < 0) || (artillery > 8)) {
-                JOptionPane
-                        .showMessageDialog(
-                                clientgui.frame,
-                                Messages.getString("CustomMechDialog.EnterSkillsBetween0_8"), Messages.getString("CustomMechDialog.NumberFormatError"), JOptionPane.ERROR_MESSAGE); //$NON-NLS-1$ //$NON-NLS-2$
+            if ((altitude < 0) || (altitude > 10)) {
+                msg = Messages
+                        .getString("CustomMechDialog.EnterCorrectAltitude"); //$NON-NLS-1$
+                title = Messages
+                        .getString("CustomMechDialog.NumberFormatError"); //$NON-NLS-1$
+                JOptionPane.showMessageDialog(clientgui.frame, msg, title,
+                        JOptionPane.ERROR_MESSAGE);
                 return;
             }
-
-            if (entity instanceof Aero) {
-                if ((velocity > (2 * entity.getWalkMP())) || (velocity < 0)) {
-                    JOptionPane
-                            .showMessageDialog(
-                                    clientgui.frame,
-                                    Messages.getString("CustomMechDialog.EnterCorrectVelocity"), Messages.getString("CustomMechDialog.NumberFormatError"), JOptionPane.ERROR_MESSAGE); //$NON-NLS-1$ //$NON-NLS-2$
-                    return;
-                }
-                if ((altitude < 0) || (altitude > 10)) {
-                    JOptionPane
-                            .showMessageDialog(
-                                    clientgui.frame,
-                                    Messages.getString("CustomMechDialog.EnterCorrectAltitude"), Messages.getString("CustomMechDialog.NumberFormatError"), JOptionPane.ERROR_MESSAGE); //$NON-NLS-1$ //$NON-NLS-2$
-                    return;
-                }
+            
+            if ((currentfuel < 0) || (currentfuel > fuel)) {
+            	msg = (Messages
+            			 .getString("CustomMechDialog.EnterCorrectFuel") + fuel + "."); //$NON-NLS-1$
+            	title = Messages
+            			.getString("CustomMechDialog.NumberFormatError"); //$NON-NLS-1$
+            	JOptionPane.showMessageDialog(clientgui.frame, msg, title,
+            			JOptionPane.ERROR_MESSAGE);
+            	return;
             }
+        }
 
-            if ((entity instanceof VTOL) && (height > 50)) {
-                JOptionPane
-                        .showMessageDialog(
-                                clientgui.frame,
-                                Messages.getString("CustomMechDialog.EnterCorrectHeight"), Messages.getString("CustomMechDialog.NumberFormatError"), JOptionPane.ERROR_MESSAGE); //$NON-NLS-1$ //$NON-NLS-2$
-                return;
-            }
+        if (isVTOL && (height > 50)
+                || (isAirMech && height > 25)
+                || (isGlider && height > 12)) {
+            msg = Messages.getString("CustomMechDialog.EnterCorrectHeight"); //$NON-NLS-1$
+            title = Messages.getString("CustomMechDialog.NumberFormatError"); //$NON-NLS-1$
+            JOptionPane.showMessageDialog(clientgui.frame, msg, title,
+                    JOptionPane.ERROR_MESSAGE);
+            return;
+        }
+        // Apply single-entity settings
+        if (entities.size() == 1) {
+            Entity entity = entities.get(0);
 
-            if (chOffBoard.isSelected()) {
+            for (int i = 0; i < entities.get(0).getCrew().getSlotCount(); i++) {
+                String name = panCrewMember[i].getPilotName();
+                String nick = panCrewMember[i].getNickname();
+                boolean missing = panCrewMember[i].getMissing();
+                int gunnery;
+                int gunneryL;
+                int gunneryM;
+                int gunneryB;
+                int artillery;
+                int piloting;
+                int gunneryAero;
+                int gunneryAeroL;
+                int gunneryAeroM;
+                int gunneryAeroB;
+                int pilotingAero;
+                int tough = 0;
+                int backup = panCrewMember[i].getBackup();
                 try {
-                    offBoardDistance = distance;
+                    gunnery = panCrewMember[i].getGunnery();
+                    gunneryL = panCrewMember[i].getGunneryL();
+                    gunneryM = panCrewMember[i].getGunneryM();
+                    gunneryB = panCrewMember[i].getGunneryB();
+                    piloting = panCrewMember[i].getPiloting();
+                    gunneryAero = panCrewMember[i].getGunneryAero();
+                    gunneryAeroL = panCrewMember[i].getGunneryAeroL();
+                    gunneryAeroM = panCrewMember[i].getGunneryAeroM();
+                    gunneryAeroB = panCrewMember[i].getGunneryAeroB();
+                    pilotingAero = panCrewMember[i].getPilotingAero();
+                    artillery = panCrewMember[i].getArtillery();
+                    tough = panCrewMember[i].getToughness();
                 } catch (NumberFormatException e) {
-                    JOptionPane
-                            .showMessageDialog(
-                                    clientgui.frame,
-                                    Messages.getString("CustomMechDialog.EnterValidSkills"), Messages.getString("CustomMechDialog.NumberFormatError"), JOptionPane.ERROR_MESSAGE); //$NON-NLS-1$ //$NON-NLS-2$
+                    msg = Messages.getString("CustomMechDialog.EnterValidSkills"); //$NON-NLS-1$
+                    title = Messages.getString("CustomMechDialog.NumberFormatError"); //$NON-NLS-1$
+                    JOptionPane.showMessageDialog(clientgui.frame, msg, title,
+                            JOptionPane.ERROR_MESSAGE);
                     return;
                 }
-                if (offBoardDistance < 17) {
-                    JOptionPane
-                            .showMessageDialog(
-                                    clientgui.frame,
-                                    Messages.getString("CustomMechDialog.OffboardDistance"), Messages.getString("CustomMechDialog.NumberFormatError"), JOptionPane.ERROR_MESSAGE); //$NON-NLS-1$ //$NON-NLS-2$
+        
+                // keep these reasonable, please
+                if ((gunnery < 0) || (gunnery > 8) || (piloting < 0) || (piloting > 8)
+                        || (gunneryL < 0) || (gunneryL > 8) || (gunneryM < 0)
+                        || (gunneryM > 8) || (gunneryB < 0) || (gunneryB > 8)
+                        || (gunneryAero < 0) || (gunneryAero > 8) || (pilotingAero < 0) || (pilotingAero > 8)
+                        || (gunneryAeroL < 0) || (gunneryAeroL > 8) || (gunneryAeroM < 0)
+                        || (gunneryAeroM > 8) || (gunneryAeroB < 0) || (gunneryAeroB > 8)                        
+                        || (artillery < 0) || (artillery > 8)) {
+                    msg = Messages.getString("CustomMechDialog.EnterSkillsBetween0_8"); //$NON-NLS-1$
+                    title = Messages.getString("CustomMechDialog.NumberFormatError"); //$NON-NLS-1$
+                    JOptionPane.showMessageDialog(clientgui.frame, msg, title,
+                            JOptionPane.ERROR_MESSAGE);
                     return;
                 }
-                entity.setOffBoard(offBoardDistance, OffBoardDirection
-                        .getDirection(choOffBoardDirection.getSelectedIndex()));
-            } else {
-                entity.setOffBoard(0, OffBoardDirection.NONE);
-            }
 
-            // change entity
-            if (client.getGame().getOptions().booleanOption("rpg_gunnery")) {
-                entity.setCrew(new Crew(name, Compute.getFullCrewSize(entity), gunneryL, gunneryM, gunneryB,
-                        piloting));
-            } else {
-                entity.setCrew(new Crew(name, Compute.getFullCrewSize(entity), gunnery, piloting));
+                if (entity.getCrew() instanceof LAMPilot) {
+                    LAMPilot pilot = (LAMPilot)entity.getCrew();
+                    if (client.getGame().getOptions().booleanOption(OptionsConstants.RPG_RPG_GUNNERY)) {
+                        pilot.setGunneryMechL(gunneryL);
+                        pilot.setGunneryMechB(gunneryB);
+                        pilot.setGunneryMechM(gunneryM);
+                        pilot.setGunneryMech((int)Math.round((gunneryL + gunneryB + gunneryM) / 3.0));
+                        pilot.setGunneryAeroL(gunneryAeroL);
+                        pilot.setGunneryAeroB(gunneryAeroB);
+                        pilot.setGunneryAeroM(gunneryAeroM);
+                        pilot.setGunneryAero((int)Math.round((gunneryAeroL + gunneryAeroB + gunneryAeroM) / 3.0));
+                    } else {
+                        pilot.setGunneryMechL(gunnery);
+                        pilot.setGunneryMechB(gunnery);
+                        pilot.setGunneryMechM(gunnery);
+                        pilot.setGunneryMech(gunnery);
+                        pilot.setGunneryAeroL(gunneryAero);
+                        pilot.setGunneryAeroB(gunneryAero);
+                        pilot.setGunneryAeroM(gunneryAero);
+                        pilot.setGunneryAero(gunneryAero);
+                    }
+                    pilot.setPilotingMech(piloting);
+                    pilot.setPilotingAero(pilotingAero);
+                } else {
+                    if (client.getGame().getOptions().booleanOption(OptionsConstants.RPG_RPG_GUNNERY)) {
+                        entity.getCrew().setGunneryL(gunneryL, i);
+                        entity.getCrew().setGunneryB(gunneryB, i);
+                        entity.getCrew().setGunneryM(gunneryM, i);
+                        entity.getCrew().setGunnery((int)Math.round((gunneryL + gunneryB + gunneryM) / 3.0), i);
+                    } else {
+                        entity.getCrew().setGunnery(gunnery, i);
+                        entity.getCrew().setGunneryL(gunnery, i);
+                        entity.getCrew().setGunneryB(gunnery, i);
+                        entity.getCrew().setGunneryM(gunnery, i);
+                    }
+                    entity.getCrew().setPiloting(piloting, i);
+                }
+                if (clientgui.getClient().getGame().getOptions().booleanOption(OptionsConstants.RPG_ARTILLERY_SKILL)) {
+                    entity.getCrew().setArtillery(artillery, i);
+                } else {
+                    entity.getCrew().setArtillery(entity.getCrew().getGunnery(i), i);
+                }
+                entity.getCrew().setMissing(missing, i);
+                entity.getCrew().setToughness(tough, i);
+                entity.getCrew().setName(name, i);
+                entity.getCrew().setNickname(nick, i);
+                entity.getCrew().setPortraitCategory(panCrewMember[i].getPortraitCategory(), i);
+                entity.getCrew().setPortraitFileName(panCrewMember[i].getPortraitFilename(), i);
+                if (backup >= 0) {
+                    if (i == entity.getCrew().getCrewType().getPilotPos()) {
+                        entity.getCrew().setBackupPilotPos(backup);
+                    } else if (i == entity.getCrew().getCrewType().getGunnerPos()) {
+                        entity.getCrew().setBackupGunnerPos(backup);
+                    }
+                }
+
+                // If the player wants to swap unit numbers, update both
+                // entities and send an update packet for the other entity.
+                Entity other = panCrewMember[i].getEntityUnitNumSwap();
+                if (null != other) {
+                    short temp = entity.getUnitNumber();
+                    entity.setUnitNumber(other.getUnitNumber());
+                    other.setUnitNumber(temp);
+                    client.sendUpdateEntity(other);
+                }
             }
-            entity.getCrew().setArtillery(artillery);
             entity.getCrew().setFatigue(fatigue);
-            entity.getCrew().setToughness(tough);
             entity.getCrew().setInitBonus(init);
             entity.getCrew().setCommandBonus(command);
-            entity.getCrew().setNickname(nick);
-            entity.getCrew().setPortraitCategory(portraitDialog.getCategory());
-            entity.getCrew().setPortraitFileName(portraitDialog.getFileName());
-            entity.getCrew().setExternalIdAsString(externalId);
-            if (entity instanceof Aero) {
-                Aero a = (Aero) entity;
-                a.setCurrentVelocity(velocity);
-                a.setNextVelocity(velocity);
-                // we need to determine whether this aero is airborne or not in
-                // order for
-                // prohibited terrain and stacking to work right in the
-                // deployment phase
-                // this is very tricky because in atmosphere, zero altitude does
-                // not
-                // necessarily mean grounded
-                if (altitude <= 0) {
-                    a.land();
-                } else {
-                    a.liftOff(altitude);
-                }
-            }
-            if (entity instanceof VTOL) {
-                VTOL v = (VTOL) entity;
-                v.setElevation(height);
-            }
-
-            // If the player wants to swap unit numbers, update both
-            // entities and send an update packet for the other entity.
-            if (!entityUnitNum.isEmpty() && (choUnitNum.getSelectedIndex() > 0)) {
-                Entity other = entityUnitNum.get(choUnitNum.getSelectedIndex());
-                short temp = entity.getUnitNumber();
-                entity.setUnitNumber(other.getUnitNumber());
-                other.setUnitNumber(temp);
-                client.sendUpdateEntity(other);
-            }
-
-            // Set the entity's deployment position and round.
-            entity.setStartingPos(choDeploymentZone.getSelectedIndex() - 1);
-            entity.setDeployRound(choDeploymentRound.getSelectedIndex());
-
-            // Should the entity begin the game shutdown?
-            if (chDeployShutdown.isSelected()
-                    && clientgui.getClient().getGame().getOptions()
-                            .booleanOption("begin_shutdown")) {
-                entity.performManualShutdown();
-            } else { // We need to else this in case someone turned the option
-                     // on, set their units, and then turned the option off.
-                entity.performManualStartup();
-            }
-
-            // Should the entity begin the game prone?
-            entity.setProne(chDeployProne.isSelected());
-
-            // Should the entity begin the game prone?
-            entity.setHullDown(chDeployHullDown.isSelected());
 
             // update commander status
             entity.setCommander(chCommander.isSelected());
@@ -1202,14 +1244,14 @@ public class CustomMechDialog extends ClientDialog implements ActionListener,
 
             if (entity instanceof BattleArmor) {
                 // have to reset internals because of dermal armor option
-                if (entity.getCrew().getOptions().booleanOption("dermal_armor")) {
+                if (entity.hasAbility(OptionsConstants.MD_DERMAL_ARMOR)) {
                     ((BattleArmor) entity).setInternal(2);
                 } else {
                     ((BattleArmor) entity).setInternal(1);
                 }
             } else if (entity instanceof Infantry) {
                 // need to reset armor on conventional infantry
-                if (entity.getCrew().getOptions().booleanOption("dermal_armor")) {
+                if (entity.hasAbility(OptionsConstants.MD_DERMAL_ARMOR)) {
                     entity.initializeArmor(
                             entity.getOInternal(Infantry.LOC_INFANTRY),
                             Infantry.LOC_INFANTRY);
@@ -1217,68 +1259,158 @@ public class CustomMechDialog extends ClientDialog implements ActionListener,
                     entity.initializeArmor(0, Infantry.LOC_INFANTRY);
                 }
             }
+        }
 
-            okay = true;
-            clientgui.chatlounge.refreshEntities();
-        }
-        
-        // Check validity of unit after customization
-        EntityVerifier verifier = EntityVerifier.getInstance(
-                new File(Configuration.unitsDir(),
-                        EntityVerifier.CONFIG_FILENAME));
-        TestEntity testEntity = null;
-        if (entity instanceof Mech) {
-            testEntity = new TestMech((Mech) entity, verifier.mechOption,
-                    null);
-        } else if ((entity instanceof Tank) && 
-                !(entity instanceof GunEmplacement)) {
-            if (entity.isSupportVehicle()) {
-                testEntity = new TestSupportVehicle(
-                        (Tank) entity,
-                        verifier.tankOption, null);
+        // Apply multiple-entity settings
+        for (Entity entity : entities) {
+            entity.setHidden(chHidden.isSelected());
+
+            if (chOffBoard.isSelected()) {
+                try {
+                    offBoardDistance = distance;
+                } catch (NumberFormatException e) {
+                    msg = Messages
+                            .getString("CustomMechDialog.EnterValidSkills"); //$NON-NLS-1$
+                    title = Messages
+                            .getString("CustomMechDialog.NumberFormatError"); //$NON-NLS-1$
+                    JOptionPane.showMessageDialog(clientgui.frame, msg, title,
+                            JOptionPane.ERROR_MESSAGE);
+                    return;
+                }
+                if (offBoardDistance < 17) {
+                    msg = Messages
+                            .getString("CustomMechDialog.OffboardDistance"); //$NON-NLS-1$
+                    title = Messages
+                            .getString("CustomMechDialog.NumberFormatError"); //$NON-NLS-1$
+                    JOptionPane.showMessageDialog(clientgui.frame, msg, title,
+                            JOptionPane.ERROR_MESSAGE);
+                    return;
+                }
+                entity.setOffBoard(offBoardDistance, OffBoardDirection
+                        .getDirection(choOffBoardDirection.getSelectedIndex()));
             } else {
-                testEntity = new TestTank((Tank) entity,
-                        verifier.tankOption, null);
+                entity.setOffBoard(0, OffBoardDirection.NONE);
             }
-        }else if (entity.getEntityType() == Entity.ETYPE_AERO
-                && entity.getEntityType() != 
-                        Entity.ETYPE_DROPSHIP
-                && entity.getEntityType() != 
-                        Entity.ETYPE_SMALL_CRAFT
-                && entity.getEntityType() != 
-                        Entity.ETYPE_FIGHTER_SQUADRON
-                && entity.getEntityType() != 
-                        Entity.ETYPE_JUMPSHIP
-                && entity.getEntityType() != 
-                        Entity.ETYPE_SPACE_STATION) {
-            testEntity = new TestAero((Aero)entity, 
-                    verifier.mechOption, null);
-        } else if (entity instanceof BattleArmor){
-            testEntity = new TestBattleArmor((BattleArmor) entity, 
-                    verifier.baOption, null);
-        }
-        int gameTL = TechConstants.getGameTechLevel(client.getGame(),
-                entity.isClan());
-        if ((testEntity != null)
-                && !testEntity.correctEntity(new StringBuffer(), gameTL)) {
-            entity.setDesignValid(false);
-        } else {
-            entity.setDesignValid(true);
-        }
+
+            if (isAero || isShip) {
+                IAero a = (IAero) entity;
+                a.setCurrentVelocity(velocity);
+                a.setNextVelocity(velocity);
+                a.setCurrentFuel(currentfuel);
+                // we need to determine whether this aero is airborne or not in
+                // order for prohibited terrain and stacking to work right in
+                // the
+                // deployment phase this is very tricky because in atmosphere,
+                // zero
+                // altitude does not necessarily mean grounded
+                if (altitude <= 0) {
+                    a.land();
+                } else {
+                    a.liftOff(altitude);
+                }
+            }
             
-        setVisible(false);
-        Entity nextOne = null;
+            if (isVTOL || isWiGE || isAirMech || isGlider) {
+                entity.setElevation(height);
+            }
+            
+            //Set the entity's starting mode
+            if (isQuadVee) {
+                entity.setConversionMode(choStartingMode.getSelectedIndex());
+            } else if (isLAM) {
+                if (choStartingMode.getSelectedIndex() == 2) {
+                    entity.setConversionMode(LandAirMech.CONV_MODE_FIGHTER);
+                } else if (choStartingMode.getSelectedIndex() == 1) {
+                    entity.setConversionMode(LandAirMech.CONV_MODE_FIGHTER);
+                    entity.setConversionMode(((LandAirMech)entity).getLAMType() == LandAirMech.LAM_BIMODAL?
+                            LandAirMech.CONV_MODE_FIGHTER : LandAirMech.CONV_MODE_AIRMECH);
+                } else {
+                    entity.setConversionMode(LandAirMech.CONV_MODE_MECH);
+                }
+            }
+
+            // Set the entity's deployment position and round.
+            entity.setStartingPos(choDeploymentZone.getSelectedIndex() - 1);
+            entity.setDeployRound(choDeploymentRound.getSelectedIndex());
+
+            // Should the entity begin the game shutdown?
+            if (chDeployShutdown.isSelected()
+                    && clientgui.getClient().getGame().getOptions()
+                            .booleanOption(OptionsConstants.RPG_BEGIN_SHUTDOWN)) {
+                entity.performManualShutdown();
+            } else { // We need to else this in case someone turned the option
+                     // on, set their units, and then turned the option off.
+                entity.performManualStartup();
+            }
+
+            // LAMs in fighter mode or airborne AirMechs ignore the prone and hull down selections.
+            if (!isLAM || (!isAero && entity.getElevation() == 0)) {
+                // Should the entity begin the game prone?
+                entity.setProne(chDeployProne.isSelected());
+    
+                // Should the entity begin the game prone?
+                entity.setHullDown(chDeployHullDown.isSelected());
+            }
+        }
+
+        okay = true;
+        status = DONE;
+        clientgui.chatlounge.refreshEntities();
+
+        // Check validity of units after customization
+        for (Entity entity : entities) {
+            EntityVerifier verifier = EntityVerifier.getInstance(new MegaMekFile(
+                    Configuration.unitsDir(), EntityVerifier.CONFIG_FILENAME).getFile());
+            TestEntity testEntity = null;
+            if (entity instanceof Mech) {
+                testEntity = new TestMech((Mech) entity, verifier.mechOption,
+                        null);
+            } else if ((entity instanceof Tank)
+                    && !(entity instanceof GunEmplacement)) {
+                if (entity.isSupportVehicle()) {
+                    testEntity = new TestSupportVehicle((Tank) entity,
+                            verifier.tankOption, null);
+                } else {
+                    testEntity = new TestTank((Tank) entity,
+                            verifier.tankOption, null);
+                }
+            } else if (entity.getEntityType() == Entity.ETYPE_AERO
+                    && entity.getEntityType() != Entity.ETYPE_DROPSHIP
+                    && entity.getEntityType() != Entity.ETYPE_SMALL_CRAFT
+                    && entity.getEntityType() != Entity.ETYPE_FIGHTER_SQUADRON
+                    && entity.getEntityType() != Entity.ETYPE_JUMPSHIP
+                    && entity.getEntityType() != Entity.ETYPE_SPACE_STATION) {
+                testEntity = new TestAero((Aero) entity, verifier.mechOption,
+                        null);
+            } else if (entity instanceof BattleArmor) {
+                testEntity = new TestBattleArmor((BattleArmor) entity,
+                        verifier.baOption, null);
+            } else if (entity instanceof Infantry) {
+                testEntity = new TestInfantry((Infantry) entity,
+                        verifier.infOption, null);
+            }
+            int gameTL = TechConstants.getGameTechLevel(client.getGame(),
+                    entity.isClan());
+            if ((testEntity != null)
+                    && !testEntity.correctEntity(new StringBuffer(), gameTL)) {
+                entity.setDesignValid(false);
+            } else {
+                entity.setDesignValid(true);
+            }
+        }
+
         if (actionEvent.getSource().equals(butPrev)) {
-            nextOne = getNextEntity(false);
+            status = PREV;
         } else if (actionEvent.getSource().equals(butNext)) {
-            nextOne = getNextEntity(true);
+            status = NEXT;
         }
-        if (nextOne != null) {
-            clientgui.chatlounge.customizeMech(nextOne);
-        }
+        setVisible(false);
     }
 
     public void itemStateChanged(ItemEvent itemEvent) {
+        if (itemEvent.getSource().equals(choStartingMode)) {
+            updateStartingModeOptions();
+        }
         if (itemEvent.getSource().equals(chDeployProne)) {
             chDeployHullDown.setSelected(false);
             return;
@@ -1297,20 +1429,49 @@ public class CustomMechDialog extends ClientDialog implements ActionListener,
         }
     }
 
-    private Entity getNextEntity(boolean forward) {
+    private void updateStartingModeOptions() {
+        final int index = choStartingMode.getSelectedIndex();
+        if (entities.get(0) instanceof QuadVee) {
+            labDeployProne.setEnabled(index == 0);
+            chDeployProne.setEnabled(index == 0);
+        } else if (entities.get(0) instanceof LandAirMech) {
+            int mode = index;
+            if (((LandAirMech)entities.get(0)).getLAMType() == LandAirMech.LAM_BIMODAL
+                    && mode == LandAirMech.CONV_MODE_AIRMECH) {
+                mode = LandAirMech.CONV_MODE_FIGHTER;
+            }
+            labDeployProne.setEnabled(mode < LandAirMech.CONV_MODE_FIGHTER);
+            chDeployProne.setEnabled(mode < LandAirMech.CONV_MODE_FIGHTER);
+            labDeployHullDown.setEnabled(mode == LandAirMech.CONV_MODE_MECH);
+            chDeployHullDown.setEnabled(mode == LandAirMech.CONV_MODE_MECH);
+            labStartHeight.setEnabled(mode == LandAirMech.CONV_MODE_AIRMECH);
+            fldStartHeight.setEnabled(mode == LandAirMech.CONV_MODE_AIRMECH);
+            labStartVelocity.setEnabled(mode == LandAirMech.CONV_MODE_FIGHTER);
+            fldStartVelocity.setEnabled(mode == LandAirMech.CONV_MODE_FIGHTER);
+            labStartAltitude.setEnabled(mode == LandAirMech.CONV_MODE_FIGHTER);
+            fldStartAltitude.setEnabled(mode == LandAirMech.CONV_MODE_FIGHTER);
+        }
+    }
+
+    public Entity getNextEntity(boolean forward) {
         IGame game = client.getGame();
-        boolean bd = game.getOptions().booleanOption("blind_drop"); //$NON-NLS-1$
-        boolean rbd = game.getOptions().booleanOption("real_blind_drop"); //$NON-NLS-1$
+        boolean bd = game.getOptions().booleanOption(OptionsConstants.BASE_BLIND_DROP); //$NON-NLS-1$
+        boolean rbd = game.getOptions().booleanOption(OptionsConstants.BASE_REAL_BLIND_DROP); //$NON-NLS-1$
         IPlayer p = client.getLocalPlayer();
 
         Entity nextOne;
+        Entity entity;
         if (forward) {
+            entity = entities.get(entities.size() - 1);
             nextOne = game.getNextEntityFromList(entity);
         } else {
+            entity = entities.get(0);
             nextOne = game.getPreviousEntityFromList(entity);
         }
-        while ((nextOne != null) && !nextOne.equals(entity)) {
-            if (nextOne.getOwner().equals(p) || (!(bd || rbd) && nextOne.getOwner().equals(entity.getOwner()))) {
+        while ((nextOne != null) && !entities.contains(nextOne)) {
+            if (nextOne.getOwner().equals(p)
+                    || (!(bd || rbd) && nextOne.getOwner().equals(
+                            entity.getOwner()))) {
                 return nextOne;
             }
             if (forward) {
@@ -1323,10 +1484,12 @@ public class CustomMechDialog extends ClientDialog implements ActionListener,
     }
 
     private void setupEquip() {
+        Entity entity = entities.get(0);
         GridBagLayout gbl = new GridBagLayout();
         panEquip.setLayout(gbl);
 
         m_equip = new EquipChoicePanel(entity, clientgui, client);
         panEquip.add(m_equip, GBC.std());
     }
+    
 }
