@@ -21,9 +21,11 @@ import java.awt.event.ItemEvent;
 import java.awt.event.ItemListener;
 import java.util.ArrayList;
 import java.util.Arrays;
-import java.util.Hashtable;
+import java.util.Comparator;
+import java.util.HashMap;
 import java.util.Iterator;
 import java.util.List;
+import java.util.Map;
 import java.util.Vector;
 
 import javax.swing.JOptionPane;
@@ -33,7 +35,9 @@ import megamek.client.ui.Messages;
 import megamek.client.ui.SharedUtility;
 import megamek.client.ui.swing.widget.IndexedRadioButton;
 import megamek.client.ui.swing.widget.MegamekButton;
+import megamek.client.ui.swing.widget.SkinSpecification;
 import megamek.common.BattleArmor;
+import megamek.common.BipedMech;
 import megamek.common.Building;
 import megamek.common.BuildingTarget;
 import megamek.common.Compute;
@@ -132,7 +136,7 @@ public class PhysicalDisplay extends StatusBarPhaseDisplay {
     }
 
     // buttons
-    protected Hashtable<PhysicalCommand, MegamekButton> buttons;
+    protected Map<PhysicalCommand, MegamekButton> buttons;
 
     // let's keep track of what we're shooting and at what, too
     private int cen = Entity.NONE; // current entity number
@@ -158,12 +162,17 @@ public class PhysicalDisplay extends StatusBarPhaseDisplay {
 
         attacks = new Vector<EntityAction>();
 
-        buttons = new Hashtable<PhysicalCommand, MegamekButton>(
+        buttons = new HashMap<PhysicalCommand, MegamekButton>(
                 (int) (PhysicalCommand.values().length * 1.25 + 0.5));
         for (PhysicalCommand cmd : PhysicalCommand.values()) {
             String title = Messages.getString("PhysicalDisplay."
                                               + cmd.getCmd());
-            MegamekButton newButton = new MegamekButton(title, "PhaseDisplayButton");
+            MegamekButton newButton = new MegamekButton(title,
+                    SkinSpecification.UIComponents.PhaseDisplayButton.getComp());
+            String ttKey = "PhysicalDisplay." + cmd.getCmd() + ".tooltip";
+            if (Messages.keyExists(ttKey)) {
+                newButton.setToolTipText(Messages.getString(ttKey));
+            }
             newButton.addActionListener(this);
             newButton.setActionCommand(cmd.getCmd());
             newButton.setEnabled(false);
@@ -281,8 +290,7 @@ public class PhysicalDisplay extends StatusBarPhaseDisplay {
 
         if ((entity instanceof Mech)
             && !entity.isProne()
-            && entity.getCrew().getOptions()
-                     .booleanOption("dodge_maneuver")) { //$NON-NLS-1$
+            && entity.hasAbility(OptionsConstants.PILOT_DODGE_MANEUVER)) { //$NON-NLS-1$
             setDodgeEnabled(true);
         }
     }
@@ -330,6 +338,7 @@ public class PhysicalDisplay extends StatusBarPhaseDisplay {
         clientgui.getBoardView().highlight(null);
         clientgui.getBoardView().cursor(null);
         clientgui.bv.clearMovementData();
+        clientgui.setSelectedEntityNum(Entity.NONE);
         disableButtons();
     }
 
@@ -410,28 +419,31 @@ public class PhysicalDisplay extends StatusBarPhaseDisplay {
         }
         final Entity en = ce();
         final boolean isAptPiloting = (en.getCrew() != null)
-                && en.getCrew()
-                        .getOptions()
-                        .booleanOption(OptionsConstants.PILOT_APTITUDE_PILOTING);
+                && en.hasAbility(OptionsConstants.PILOT_APTITUDE_PILOTING);
+        final boolean canZweihander = null != en
+                && (en instanceof BipedMech) 
+                && ((BipedMech)en).canZweihander()
+                && Compute.isInArc(en.getPosition(), en.getSecondaryFacing(), target, en.getForwardArc());;
         final boolean isMeleeMaster = (en.getCrew() != null)
-                && en.getCrew().getOptions().booleanOption("melee_master");
+                && en.hasAbility(OptionsConstants.PILOT_MELEE_MASTER);
         
+              
         final ToHitData leftArm = PunchAttackAction.toHit(clientgui.getClient()
-                .getGame(), cen, target, PunchAttackAction.LEFT);
+                .getGame(), cen, target, PunchAttackAction.LEFT, false);
         final ToHitData rightArm = PunchAttackAction.toHit(clientgui
-                .getClient().getGame(), cen, target, PunchAttackAction.RIGHT);
+                .getClient().getGame(), cen, target, PunchAttackAction.RIGHT, false);
         
         final double punchOddsRight = Compute.oddsAbove(rightArm.getValue(),
                 isAptPiloting);
         final int punchDmgRight = PunchAttackAction.getDamageFor(en,
                 PunchAttackAction.RIGHT, (target instanceof Infantry)
-                        && !(target instanceof BattleArmor));
+                        && !(target instanceof BattleArmor), false);
         
         final double punchOddsLeft = Compute.oddsAbove(leftArm.getValue(),
                 isAptPiloting);
         final int punchDmgLeft = PunchAttackAction.getDamageFor(en,
                 PunchAttackAction.LEFT, (target instanceof Infantry)
-                        && !(target instanceof BattleArmor));
+                        && !(target instanceof BattleArmor), false);
         
         String title = Messages.getString("PhysicalDisplay.PunchDialog.title", //$NON-NLS-1$
                 new Object[] { target.getDisplayName() }); 
@@ -459,7 +471,7 @@ public class PhysicalDisplay extends StatusBarPhaseDisplay {
             if ((en instanceof Mech)
                     && (target instanceof Entity)
                     && clientgui.getClient().getGame().getOptions()
-                            .booleanOption("tacops_retractable_blades")
+                            .booleanOption(OptionsConstants.ADVCOMBAT_TACOPS_RETRACTABLE_BLADES)
                     && (leftArm.getValue() != TargetRoll.IMPOSSIBLE)
                     && ((Mech) ce()).hasRetractedBlade(Mech.LOC_LARM)) {
                 leftBladeExtend = clientgui.doYesNoDialog(Messages
@@ -473,7 +485,7 @@ public class PhysicalDisplay extends StatusBarPhaseDisplay {
                     && (target instanceof Entity)
                     && (rightArm.getValue() != TargetRoll.IMPOSSIBLE)
                     && clientgui.getClient().getGame().getOptions()
-                            .booleanOption("tacops_retractable_blades")
+                            .booleanOption(OptionsConstants.ADVCOMBAT_TACOPS_RETRACTABLE_BLADES)
                     && ((Mech) en).hasRetractedBlade(Mech.LOC_RARM)) {
                 rightBladeExtend = clientgui.doYesNoDialog(Messages
                         .getString("PhysicalDisplay.ExtendBladeDialog"
@@ -481,6 +493,53 @@ public class PhysicalDisplay extends StatusBarPhaseDisplay {
                         "PhysicalDisplay.ExtendBladeDialog.message",
                         new Object[] { en.getLocationName(Mech.LOC_RARM) }));
             }
+            
+            boolean zweihandering = false;
+            int armChosenZwei = PunchAttackAction.RIGHT;
+            if(canZweihander) {
+                
+                //need to choose a primary arm. Do it based on highest predicted damage     		
+                ToHitData leftArmZwei = PunchAttackAction.toHit(clientgui.getClient()
+                        .getGame(), cen, target, PunchAttackAction.LEFT, true);
+                ToHitData rightArmZwei = PunchAttackAction.toHit(clientgui
+                        .getClient().getGame(), cen, target, PunchAttackAction.RIGHT, true);
+                int damageRightZwei = PunchAttackAction.getDamageFor(en,
+                        PunchAttackAction.RIGHT, (target instanceof Infantry)
+                                && !(target instanceof BattleArmor), true);
+                int damageLeftZwei = PunchAttackAction.getDamageFor(en,
+                        PunchAttackAction.LEFT, (target instanceof Infantry)
+                                && !(target instanceof BattleArmor), true);
+                double oddsLeft = Compute.oddsAbove(leftArmZwei.getValue(), isAptPiloting);
+                double oddsRight = Compute.oddsAbove(rightArmZwei.getValue(), isAptPiloting);
+                ToHitData toHitZwei = rightArmZwei;
+                int damageZwei = damageRightZwei;
+                double oddsZwei = oddsRight;
+                if ((oddsLeft * damageLeftZwei) > (oddsRight * damageRightZwei)) {
+                    toHitZwei = leftArmZwei;
+                    damageZwei = damageLeftZwei;
+                    oddsZwei = oddsLeft;
+                    armChosenZwei = PunchAttackAction.LEFT;
+                } 
+                              
+                zweihandering = clientgui.doYesNoDialog(Messages
+                        .getString("PhysicalDisplay.ZweihanderPunchDialog.title"),
+                        Messages.getString("PhysicalDisplay.ZweihanderPunchDialog.message",
+                            new Object[] { 
+                                    toHitZwei.getValueAsString(),
+                                    oddsZwei,
+                                    toHitZwei.getDesc(),
+                                    damageZwei,
+                                    toHitZwei.getTableDesc()}));
+            }
+            
+            if(zweihandering) {
+                if(armChosenZwei==PunchAttackAction.LEFT) {
+                    leftArm.addModifier(TargetRoll.IMPOSSIBLE, "zweihandering with other arm");
+                } else {
+                    rightArm.addModifier(TargetRoll.IMPOSSIBLE, "zweihandering with other arm");
+                }
+            }
+
             disableButtons();
             // declare searchlight, if possible
             if (GUIPreferences.getInstance().getAutoDeclareSearchlight()) {
@@ -492,37 +551,37 @@ public class PhysicalDisplay extends StatusBarPhaseDisplay {
                 attacks.addElement(new PunchAttackAction(cen, target
                         .getTargetType(), target.getTargetId(),
                         PunchAttackAction.BOTH, leftBladeExtend,
-                        rightBladeExtend));
-                if (isMeleeMaster) {
+                        rightBladeExtend, zweihandering));
+                if (isMeleeMaster && !zweihandering) {
                     // hit 'em again!
                     attacks.addElement(new PunchAttackAction(cen, target
                             .getTargetType(), target.getTargetId(),
                             PunchAttackAction.BOTH, leftBladeExtend,
-                            rightBladeExtend));
+                            rightBladeExtend, zweihandering));
                 }
             } else if (leftArm.getValue() < rightArm.getValue()) {
                 attacks.addElement(new PunchAttackAction(cen, target
                         .getTargetType(), target.getTargetId(),
                         PunchAttackAction.LEFT, leftBladeExtend,
-                        rightBladeExtend));
-                if (isMeleeMaster) {
+                        rightBladeExtend, zweihandering));
+                if (isMeleeMaster  && !zweihandering) {
                     // hit 'em again!
                     attacks.addElement(new PunchAttackAction(cen, target
                             .getTargetType(), target.getTargetId(),
                             PunchAttackAction.LEFT, leftBladeExtend,
-                            rightBladeExtend));
+                            rightBladeExtend, zweihandering));
                 }
             } else {
                 attacks.addElement(new PunchAttackAction(cen, target
                         .getTargetType(), target.getTargetId(),
                         PunchAttackAction.RIGHT, leftBladeExtend,
-                        rightBladeExtend));
-                if (isMeleeMaster) {
+                        rightBladeExtend, zweihandering));
+                if (isMeleeMaster && !zweihandering) {
                     // hit 'em again!
                     attacks.addElement(new PunchAttackAction(cen, target
                             .getTargetType(), target.getTargetId(),
                             PunchAttackAction.RIGHT, leftBladeExtend,
-                            rightBladeExtend));
+                            rightBladeExtend, zweihandering));
                 }
             }
             ready();
@@ -567,11 +626,9 @@ public class PhysicalDisplay extends StatusBarPhaseDisplay {
         }
         final Entity en = ce();
         final boolean isAptPiloting = (en.getCrew() != null)
-                && en.getCrew()
-                        .getOptions()
-                        .booleanOption(OptionsConstants.PILOT_APTITUDE_PILOTING);
+                && en.hasAbility(OptionsConstants.PILOT_APTITUDE_PILOTING);
         final boolean isMeleeMaster = (en.getCrew() != null)
-                && en.getCrew().getOptions().booleanOption("melee_master");
+                && en.hasAbility(OptionsConstants.PILOT_MELEE_MASTER);
         
         ToHitData leftLeg = KickAttackAction.toHit(clientgui.getClient()
                 .getGame(), cen, target, KickAttackAction.LEFT);
@@ -660,13 +717,10 @@ public class PhysicalDisplay extends StatusBarPhaseDisplay {
                 .getString(
                         "PhysicalDisplay.PushDialog.message", new Object[] {//$NON-NLS-1$
                                 toHit.getValueAsString(),
-                                new Double(
+                                Double.valueOf(
                                         Compute.oddsAbove(
                                                 toHit.getValue(),
-                                                ce().getCrew()
-                                                        .getOptions()
-                                                        .booleanOption(
-                                                                OptionsConstants.PILOT_APTITUDE_PILOTING))),
+                                                ce().hasAbility(OptionsConstants.PILOT_APTITUDE_PILOTING))),
                                 toHit.getDesc() });
         if (clientgui.doYesNoDialog(title, message)) {
             disableButtons();
@@ -695,13 +749,10 @@ public class PhysicalDisplay extends StatusBarPhaseDisplay {
                 .getString(
                         "PhysicalDisplay.TripDialog.message", new Object[] { //$NON-NLS-1$
                                 toHit.getValueAsString(),
-                                new Double(
+                                Double.valueOf(
                                         Compute.oddsAbove(
                                                 toHit.getValue(),
-                                                ce().getCrew()
-                                                        .getOptions()
-                                                        .booleanOption(
-                                                                OptionsConstants.PILOT_APTITUDE_PILOTING))),
+                                                ce().hasAbility(OptionsConstants.PILOT_APTITUDE_PILOTING))),
                                 toHit.getDesc() });
         if (clientgui.doYesNoDialog(title, message)) {
             disableButtons();
@@ -737,13 +788,10 @@ public class PhysicalDisplay extends StatusBarPhaseDisplay {
                 .getString(
                         "PhysicalDisplay.GrappleDialog.message", new Object[] { //$NON-NLS-1$
                                 toHit.getValueAsString(),
-                                new Double(
+                                Double.valueOf(
                                         Compute.oddsAbove(
                                                 toHit.getValue(),
-                                                ce().getCrew()
-                                                        .getOptions()
-                                                        .booleanOption(
-                                                                OptionsConstants.PILOT_APTITUDE_PILOTING))),
+                                                ce().hasAbility(OptionsConstants.PILOT_APTITUDE_PILOTING))),
                                 toHit.getDesc() });
         if (counter) {
             message = Messages
@@ -751,13 +799,10 @@ public class PhysicalDisplay extends StatusBarPhaseDisplay {
                             "PhysicalDisplay.CounterGrappleDialog.message", new Object[] { //$NON-NLS-1$
                                     target.getDisplayName(),
                                     toHit.getValueAsString(),
-                                    new Double(
+                                    Double.valueOf(
                                             Compute.oddsAbove(
                                                     toHit.getValue(),
-                                                    ce().getCrew()
-                                                            .getOptions()
-                                                            .booleanOption(
-                                                                    OptionsConstants.PILOT_APTITUDE_PILOTING))),
+                                                    ce().hasAbility(OptionsConstants.PILOT_APTITUDE_PILOTING))),
                                     toHit.getDesc() });
         }
         if (clientgui.doYesNoDialog(title, message)) {
@@ -784,13 +829,10 @@ public class PhysicalDisplay extends StatusBarPhaseDisplay {
                 .getString(
                         "PhysicalDisplay.BreakGrappleDialog.message", new Object[] { //$NON-NLS-1$
                                 toHit.getValueAsString(),
-                                new Double(
+                                Double.valueOf(
                                         Compute.oddsAbove(
                                                 toHit.getValue(),
-                                                ce().getCrew()
-                                                        .getOptions()
-                                                        .booleanOption(
-                                                                OptionsConstants.PILOT_APTITUDE_PILOTING))),
+                                                ce().hasAbility(OptionsConstants.PILOT_APTITUDE_PILOTING))),
                                 toHit.getDesc() });
         if (clientgui.doYesNoDialog(title, message)) {
             disableButtons();
@@ -820,13 +862,10 @@ public class PhysicalDisplay extends StatusBarPhaseDisplay {
                 .getString(
                         "PhysicalDisplay.BAVibroClawDialog.message", new Object[] {//$NON-NLS-1$
                                 toHit.getValueAsString(),
-                                new Double(
+                                Double.valueOf(
                                         Compute.oddsAbove(
                                                 toHit.getValue(),
-                                                ce().getCrew()
-                                                        .getOptions()
-                                                        .booleanOption(
-                                                                OptionsConstants.PILOT_APTITUDE_PILOTING))),
+                                                ce().hasAbility(OptionsConstants.PILOT_APTITUDE_PILOTING))),
                                 toHit.getDesc(),
                                 ce().getVibroClaws() + toHit.getTableDesc() });
 
@@ -859,16 +898,10 @@ public class PhysicalDisplay extends StatusBarPhaseDisplay {
                     JumpJetAttackAction.RIGHT);
             if ((d_left * Compute.oddsAbove(
                     left.getValue(),
-                    ce().getCrew()
-                            .getOptions()
-                            .booleanOption(
-                                    OptionsConstants.PILOT_APTITUDE_PILOTING))) > (d_right * Compute
+                    ce().hasAbility(OptionsConstants.PILOT_APTITUDE_PILOTING))) > (d_right * Compute
                     .oddsAbove(
                             right.getValue(),
-                            ce().getCrew()
-                                    .getOptions()
-                                    .booleanOption(
-                                            OptionsConstants.PILOT_APTITUDE_PILOTING)))) {
+                            ce().hasAbility(OptionsConstants.PILOT_APTITUDE_PILOTING)))) {
                 toHit = left;
                 leg = JumpJetAttackAction.LEFT;
                 damage = d_left;
@@ -886,13 +919,10 @@ public class PhysicalDisplay extends StatusBarPhaseDisplay {
                 .getString(
                         "PhysicalDisplay.JumpJetDialog.message", new Object[] { //$NON-NLS-1$
                                 toHit.getValueAsString(),
-                                new Double(
+                                Double.valueOf(
                                         Compute.oddsAbove(
                                                 toHit.getValue(),
-                                                ce().getCrew()
-                                                        .getOptions()
-                                                        .booleanOption(
-                                                                OptionsConstants.PILOT_APTITUDE_PILOTING))),
+                                                ce().hasAbility(OptionsConstants.PILOT_APTITUDE_PILOTING))),
                                 toHit.getDesc(), damage });
         if (clientgui.doYesNoDialog(title, message)) {
             disableButtons();
@@ -915,16 +945,25 @@ public class PhysicalDisplay extends StatusBarPhaseDisplay {
             String[] names = new String[clubs.size()];
             for (int loop = 0; loop < names.length; loop++) {
                 Mounted club = clubs.get(loop);
+                boolean targetConvInf = (target instanceof Infantry)
+                        && !(target instanceof BattleArmor);
                 final ToHitData toHit = ClubAttackAction.toHit(clientgui
                         .getClient().getGame(), cen, target, club, ash
-                        .getAimTable());
+                        .getAimTable(), false);
                 final int dmg = ClubAttackAction.getDamageFor(ce(), club,
-                        (target instanceof Infantry)
-                                && !(target instanceof BattleArmor));
+                        targetConvInf, false);
+                // Need to do this outside getDamageFor, as it only returns int
+                String dmgString = dmg + "";
+                if ((((MiscType) club.getType()).hasSubType(MiscType.S_COMBINE)
+                        || ((MiscType) club.getType()).hasSubType(MiscType.S_CHAINSAW)
+                        || ((MiscType) club.getType()).hasSubType(MiscType.S_DUAL_SAW))
+                        && targetConvInf) {
+                    dmgString = "1d6";
+                }
                 names[loop] = Messages.getString(
                                 "PhysicalDisplay.ChooseClubDialog.line", //$NON-NLS-1$
                                 new Object[] { club.getName(),
-                                        toHit.getValueAsString(), dmg });
+                                        toHit.getValueAsString(), dmgString });
             }
 
             String input = (String) JOptionPane
@@ -965,21 +1004,30 @@ public class PhysicalDisplay extends StatusBarPhaseDisplay {
         final Entity en = ce();
         
         final boolean isAptPiloting = (en.getCrew() != null)
-                && en.getCrew()
-                        .getOptions()
-                        .booleanOption(OptionsConstants.PILOT_APTITUDE_PILOTING);
+                && en.hasAbility(OptionsConstants.PILOT_APTITUDE_PILOTING);
         final boolean isMeleeMaster = (en.getCrew() != null)
-                && en.getCrew().getOptions().booleanOption("melee_master");
-        
+                && en.hasAbility(OptionsConstants.PILOT_MELEE_MASTER);
+        final boolean canZweihander = null != en
+                && (en instanceof BipedMech) 
+                && ((BipedMech)en).canZweihander()
+                && Compute.isInArc(en.getPosition(), en.getSecondaryFacing(), target, en.getForwardArc());
+                
         final ToHitData toHit = ClubAttackAction.toHit(clientgui.getClient()
-                .getGame(), cen, target, club, ash.getAimTable());
-        
+                .getGame(), cen, target, club, ash.getAimTable(), false);
+        boolean targetConvInf = (target instanceof Infantry)
+                && !(target instanceof BattleArmor);
         final double clubOdds = Compute.oddsAbove(toHit.getValue(),
                 isAptPiloting);
         final int clubDmg = ClubAttackAction.getDamageFor(en, club,
-                (target instanceof Infantry)
-                        && !(target instanceof BattleArmor));
-        
+                targetConvInf, false);
+        // Need to do this outside getDamageFor, as it only returns int
+        String dmgString = clubDmg + "";
+        if ((((MiscType) club.getType()).hasSubType(MiscType.S_COMBINE)
+                || ((MiscType) club.getType()).hasSubType(MiscType.S_CHAINSAW)
+                || ((MiscType) club.getType()).hasSubType(MiscType.S_DUAL_SAW))
+                && targetConvInf) {
+            dmgString = "1d6";
+        }
         String title = Messages.getString("PhysicalDisplay.ClubDialog.title", //$NON-NLS-1$ 
                 new Object[] { target.getDisplayName() });
         String message = Messages
@@ -988,7 +1036,7 @@ public class PhysicalDisplay extends StatusBarPhaseDisplay {
                                 toHit.getValueAsString(),
                                 clubOdds,
                                 toHit.getDesc(),
-                                clubDmg,
+                                dmgString,
                                 toHit.getTableDesc() });
         
         if (isMeleeMaster) {
@@ -997,6 +1045,23 @@ public class PhysicalDisplay extends StatusBarPhaseDisplay {
         }
         
         if (clientgui.doYesNoDialog(title, message)) {
+            boolean zweihandering = false;
+            if(canZweihander) {
+                ToHitData toHitZwei = ClubAttackAction.toHit(clientgui.getClient()
+                        .getGame(), cen, target, club, ash.getAimTable(), true);
+                zweihandering = clientgui.doYesNoDialog(Messages
+                        .getString("PhysicalDisplay.ZweihanderClubDialog.title"),
+                        Messages.getString("PhysicalDisplay.ZweihanderClubDialog.message",
+                                new Object[] { 
+                                        toHitZwei.getValueAsString(),
+                                        Compute.oddsAbove(toHit.getValue(),
+                                                isAptPiloting),
+                                        toHitZwei.getDesc(),
+                                        ClubAttackAction.getDamageFor(en, club,
+                                                targetConvInf, true),
+                                        toHitZwei.getTableDesc() }));
+            }
+            
             disableButtons();
             // declare searchlight, if possible
             if (GUIPreferences.getInstance().getAutoDeclareSearchlight()) {
@@ -1005,12 +1070,12 @@ public class PhysicalDisplay extends StatusBarPhaseDisplay {
 
             attacks.addElement(new ClubAttackAction(cen,
                     target.getTargetType(), target.getTargetId(), club, ash
-                            .getAimTable()));
-            if (isMeleeMaster) {
+                            .getAimTable(), zweihandering));
+            if (isMeleeMaster && !zweihandering) {
                 // hit 'em again!
                 attacks.addElement(new ClubAttackAction(cen, target
                         .getTargetType(), target.getTargetId(), club, ash
-                        .getAimTable()));
+                        .getAimTable(), zweihandering));
             }
             ready();
         }
@@ -1030,13 +1095,10 @@ public class PhysicalDisplay extends StatusBarPhaseDisplay {
                 .getString(
                         "PhysicalDisplay.ProtoMechAttackDialog.message", new Object[] {//$NON-NLS-1$
                                 proto.getValueAsString(),
-                                new Double(
+                                Double.valueOf(
                                         Compute.oddsAbove(
                                                 proto.getValue(),
-                                                ce().getCrew()
-                                                        .getOptions()
-                                                        .booleanOption(
-                                                                OptionsConstants.PILOT_APTITUDE_PILOTING))),
+                                                ce().hasAbility(OptionsConstants.PILOT_APTITUDE_PILOTING))),
                                 proto.getDesc(),
                                 ProtomechPhysicalAttackAction.getDamageFor(
                                         ce(), target) + proto.getTableDesc() });
@@ -1064,7 +1126,7 @@ public class PhysicalDisplay extends StatusBarPhaseDisplay {
                 .getString(
                         "PhysicalDisplay.LayExplosivesAttackDialog.message", new Object[] {//$NON-NLS-1$
                                 explo.getValueAsString(),
-                                new Double(Compute.oddsAbove(explo.getValue())),
+                                Double.valueOf(Compute.oddsAbove(explo.getValue())),
                                 explo.getDesc() });
         if (clientgui.doYesNoDialog(title, message)) {
             disableButtons();
@@ -1132,14 +1194,11 @@ public class PhysicalDisplay extends StatusBarPhaseDisplay {
                     .getString(
                             "PhysicalDisplay.LAHit", new Object[] {//$NON-NLS-1$
                                     toHitLeft.getValueAsString(),
-                                    new Double(
+                                    Double.valueOf(
                                             Compute.oddsAbove(
                                                     toHitLeft.getValue(),
-                                                    ce().getCrew()
-                                                            .getOptions()
-                                                            .booleanOption(
-                                                                    OptionsConstants.PILOT_APTITUDE_PILOTING))),
-                                    new Integer(damageLeft) });
+                                                    ce().hasAbility(OptionsConstants.PILOT_APTITUDE_PILOTING))),
+                                    Integer.valueOf(damageLeft) });
         }
 
         // If we can hit with the right arm, get
@@ -1151,14 +1210,11 @@ public class PhysicalDisplay extends StatusBarPhaseDisplay {
                     .getString(
                             "PhysicalDisplay.RAHit", new Object[] {//$NON-NLS-1$
                                     toHitRight.getValueAsString(),
-                                    new Double(
+                                    Double.valueOf(
                                             Compute.oddsAbove(
                                                     toHitRight.getValue(),
-                                                    ce().getCrew()
-                                                            .getOptions()
-                                                            .booleanOption(
-                                                                    OptionsConstants.PILOT_APTITUDE_PILOTING))),
-                                    new Integer(damageRight) });
+                                                    ce().hasAbility(OptionsConstants.PILOT_APTITUDE_PILOTING))),
+                                    Integer.valueOf(damageRight) });
         }
 
         // Allow the player to cancel or choose which arm(s) to use.
@@ -1258,13 +1314,10 @@ public class PhysicalDisplay extends StatusBarPhaseDisplay {
                 .getString(
                         "PhysicalDisplay.TrashDialog.message", new Object[] {//$NON-NLS-1$
                                 toHit.getValueAsString(),
-                                new Double(
+                                Double.valueOf(
                                         Compute.oddsAbove(
                                                 toHit.getValue(),
-                                                ce().getCrew()
-                                                        .getOptions()
-                                                        .booleanOption(
-                                                                OptionsConstants.PILOT_APTITUDE_PILOTING))),
+                                                ce().hasAbility(OptionsConstants.PILOT_APTITUDE_PILOTING))),
                                 toHit.getDesc(),
                                 ThrashAttackAction.getDamageFor(ce())
                                         + toHit.getTableDesc() });
@@ -1319,10 +1372,10 @@ public class PhysicalDisplay extends StatusBarPhaseDisplay {
                 // punch?
                 final ToHitData leftArm = PunchAttackAction.toHit(clientgui
                         .getClient().getGame(), cen, target,
-                        PunchAttackAction.LEFT);
+                        PunchAttackAction.LEFT, false);
                 final ToHitData rightArm = PunchAttackAction.toHit(clientgui
                         .getClient().getGame(), cen, target,
-                        PunchAttackAction.RIGHT);
+                        PunchAttackAction.RIGHT, false);
                 boolean canPunch = (leftArm.getValue() != TargetRoll.IMPOSSIBLE)
                         || (rightArm.getValue() != TargetRoll.IMPOSSIBLE);
                 setPunchEnabled(canPunch);
@@ -1383,7 +1436,7 @@ public class PhysicalDisplay extends StatusBarPhaseDisplay {
                     if (club != null) {
                         ToHitData clubToHit = ClubAttackAction.toHit(clientgui
                                 .getClient().getGame(), cen, target, club, ash
-                                .getAimTable());
+                                .getAimTable(), false);
                         canClub |= (clubToHit.getValue() != TargetRoll.IMPOSSIBLE);
                         // assuming S7 vibroswords count as swords and maces
                         // count as hatchets
@@ -1522,29 +1575,41 @@ public class PhysicalDisplay extends StatusBarPhaseDisplay {
      * @param pos - the <code>Coords</code> containing targets.
      */
     private Targetable chooseTarget(Coords pos) {
-
+        final IGame game = clientgui.getClient().getGame();
         // Assume that we have *no* choice.
         Targetable choice = null;
 
         // Get the available choices.
-        Iterator<Entity> choices = clientgui.getClient().getGame()
-                                               .getEntities(pos);
+        Iterator<Entity> choices = game.getEntities(pos);
 
         // Convert the choices into a List of targets.
         List<Targetable> targets = new ArrayList<Targetable>();
+        boolean friendlyFire = game.getOptions().booleanOption(OptionsConstants.BASE_FRIENDLY_FIRE);
         while (choices.hasNext()) {
             choice = choices.next();
-            if (!ce().equals(choice)) {
+            if (!ce().equals(choice) && (friendlyFire || choice.isEnemyOf(ce()))) {
                 targets.add(choice);
             }
         }
+        targets.sort(new Comparator<Targetable>(){
+
+            @Override
+            public int compare(Targetable o1, Targetable o2) {
+                boolean enemy1 = o1.isEnemyOf(ce());
+                boolean enemy2 = o2.isEnemyOf(ce());
+                if (enemy1 && enemy2) {
+                    return 0;
+                } else if (enemy1 && !enemy2) {
+                    return -1;
+                } else {
+                    return 1;
+                }
+            }});
 
         // Is there a building in the hex?
-        Building bldg = clientgui.getClient().getGame().getBoard()
-                                 .getBuildingAt(pos);
+        Building bldg = game.getBoard().getBuildingAt(pos);
         if (bldg != null) {
-            targets.add(new BuildingTarget(pos, clientgui.getClient().getGame()
-                                                         .getBoard(), false));
+            targets.add(new BuildingTarget(pos, game.getBoard(), false));
         }
 
         // Is the attacker targeting its own hex?
@@ -1559,10 +1624,8 @@ public class PhysicalDisplay extends StatusBarPhaseDisplay {
 
         // Do we have a single choice?
         if (targets.size() == 1) {
-
             // Return that choice.
             choice = targets.get(0);
-
         }
 
         // If we have multiple choices, display a selection dialog.
@@ -1592,6 +1655,14 @@ public class PhysicalDisplay extends StatusBarPhaseDisplay {
 
         // Are we ignoring events?
         if (isIgnoringEvents()) {
+            return;
+        }
+        // On simultaneous phases, each player ending their turn will generalte a turn change
+        // We want to ignore turns from other players and only listen to events we generated
+        // Except on the first turn
+        if (clientgui.getClient().getGame().isPhaseSimultaneous()
+                && (e.getPreviousPlayerId() != clientgui.getClient().getLocalPlayerNumber())
+                && (clientgui.getClient().getGame().getTurnIndex() != 0)) {
             return;
         }
 
