@@ -18,7 +18,8 @@ import java.awt.event.ActionEvent;
 import java.awt.event.InputEvent;
 import java.util.ArrayList;
 import java.util.Arrays;
-import java.util.Hashtable;
+import java.util.HashMap;
+import java.util.Map;
 
 import megamek.client.event.BoardViewEvent;
 import megamek.client.ui.Messages;
@@ -26,6 +27,7 @@ import megamek.client.ui.swing.util.CommandAction;
 import megamek.client.ui.swing.util.KeyCommandBind;
 import megamek.client.ui.swing.util.MegaMekController;
 import megamek.client.ui.swing.widget.MegamekButton;
+import megamek.client.ui.swing.widget.SkinSpecification;
 import megamek.common.Coords;
 import megamek.common.IBoard;
 import megamek.common.IGame;
@@ -34,6 +36,7 @@ import megamek.common.SpecialHexDisplay;
 import megamek.common.containers.PlayerIDandList;
 import megamek.common.event.GamePhaseChangeEvent;
 import megamek.common.event.GameTurnChangeEvent;
+import megamek.common.options.OptionsConstants;
 
 public class SelectArtyAutoHitHexDisplay extends StatusBarPhaseDisplay {
 
@@ -80,7 +83,7 @@ public class SelectArtyAutoHitHexDisplay extends StatusBarPhaseDisplay {
     }
     
     // buttons
-    protected Hashtable<ArtyAutoHitCommand,MegamekButton> buttons;
+    protected Map<ArtyAutoHitCommand,MegamekButton> buttons;
 
     private IPlayer p;
     private PlayerIDandList<Coords> artyAutoHitHexes = new PlayerIDandList<Coords>();
@@ -104,13 +107,17 @@ public class SelectArtyAutoHitHexDisplay extends StatusBarPhaseDisplay {
 
         artyAutoHitHexes.setPlayerID(p.getId());
 
-        buttons = new Hashtable<ArtyAutoHitCommand, MegamekButton>(
+        buttons = new HashMap<ArtyAutoHitCommand, MegamekButton>(
                 (int) (ArtyAutoHitCommand.values().length * 1.25 + 0.5));
         for (ArtyAutoHitCommand cmd : ArtyAutoHitCommand.values()) {
             String title = Messages.getString("SelectArtyAutoHitHexDisplay."
                     + cmd.getCmd());
             MegamekButton newButton = new MegamekButton(title,
-                    "PhaseDisplayButton");
+                    SkinSpecification.UIComponents.PhaseDisplayButton.getComp());
+            String ttKey = "SelectArtyAutoHitHexDisplay." + cmd.getCmd() + ".tooltip";
+            if (Messages.keyExists(ttKey)) {
+                newButton.setToolTipText(Messages.getString(ttKey));
+            }
             newButton.addActionListener(this);
             newButton.setActionCommand(cmd.getCmd());
             newButton.setEnabled(false);
@@ -146,16 +153,14 @@ public class SelectArtyAutoHitHexDisplay extends StatusBarPhaseDisplay {
     private void beginMyTurn() {
         // Make sure we've got the correct local player
         p = clientgui.getClient().getLocalPlayer();
-        // By default, we should get 5 hexes per 4 mapsheets
-        // 4 mapsheets is 16*17*4 hexes, so 1088        
+        // By default, we should get 5 hexes per 4 mapsheets (4 mapsheets is
+        // 16*17*4 hexes, so 1088)
         IGame game = clientgui.getClient().getGame();
         IBoard board = game.getBoard();
-        int preDesignateArea = 
-                game.getOptions().intOption("map_area_predesignate");
-        int hexesPer = 
-                game.getOptions().intOption("num_hexes_predesignate");
+        int preDesignateArea = game.getOptions().intOption(OptionsConstants.ADVCOMBAT_MAP_AREA_PREDESIGNATE);
+        int hexesPer = game.getOptions().intOption(OptionsConstants.ADVCOMBAT_NUM_HEXES_PREDESIGNATE);
         double mapArea = board.getWidth() * board.getHeight();
-        startingHexes = (int) Math.ceil((mapArea)/preDesignateArea)*hexesPer;
+        startingHexes = (int) Math.ceil((mapArea) / preDesignateArea) * hexesPer;
         artyAutoHitHexes.clear();
         setArtyEnabled(startingHexes);
         butDone.setEnabled(true);
@@ -330,7 +335,7 @@ public class SelectArtyAutoHitHexDisplay extends StatusBarPhaseDisplay {
     private void setArtyEnabled(int nbr) {
         buttons.get(ArtyAutoHitCommand.SET_HIT_HEX).setText(Messages.getString(
         "SelectArtyAutoHitHexDisplay." +ArtyAutoHitCommand.SET_HIT_HEX.getCmd(), 
-        new Object[] { new Integer(nbr) })); //$NON-NLS-1$
+        new Object[] { Integer.valueOf(nbr) })); //$NON-NLS-1$
         buttons.get(ArtyAutoHitCommand.SET_HIT_HEX).setEnabled(nbr > 0);
         // clientgui.getMenuBar().setSelectArtyAutoHitHexEnabled(nbr);
     }
