@@ -25,9 +25,11 @@ import java.util.Hashtable;
 import java.util.Iterator;
 import java.util.List;
 import java.util.Map;
+import java.util.Set;
 import java.util.Vector;
 import java.util.concurrent.CopyOnWriteArrayList;
 
+import megamek.MegaMek;
 import megamek.common.GameTurn.SpecificEntityTurn;
 import megamek.common.actions.ArtilleryAttackAction;
 import megamek.common.actions.AttackAction;
@@ -47,11 +49,10 @@ import megamek.common.event.GamePlayerChangeEvent;
 import megamek.common.event.GameSettingsChangeEvent;
 import megamek.common.event.GameTurnChangeEvent;
 import megamek.common.options.GameOptions;
+import megamek.common.options.OptionsConstants;
 import megamek.common.weapons.AttackHandler;
 import megamek.server.SmokeCloud;
-import megamek.server.victory.SpaghettiVictoryFactory;
 import megamek.server.victory.Victory;
-import megamek.server.victory.VictoryFactory;
 
 /**
  * The game class is the root of all data about the game in progress. Both the
@@ -63,6 +64,11 @@ public class Game implements Serializable, IGame {
      *
      */
     private static final long serialVersionUID = 8376320092671792532L;
+
+    /**
+     * Stores the version of MM, so that it can be serialized in saved games.
+     */
+    public String mmVersion = MegaMek.VERSION;
 
     /**
      * Define constants to describe the condition a unit was in when it wass
@@ -158,7 +164,6 @@ public class Game implements Serializable, IGame {
 
     // victory condition related stuff
     private Victory victory = null;
-    private VictoryFactory vf = new SpaghettiVictoryFactory();
 
     // smoke clouds
     private List<SmokeCloud> smokeCloudList = new CopyOnWriteArrayList<>();
@@ -382,7 +387,7 @@ public class Game implements Serializable, IGame {
      */
     public void setupTeams() {
         Vector<Team> initTeams = new Vector<Team>();
-        boolean useTeamInit = getOptions().getOption("team_initiative")
+        boolean useTeamInit = getOptions().getOption(OptionsConstants.BASE_TEAM_INITIATIVE)
                                           .booleanValue();
 
         // Get all NO_TEAM players. If team_initiative is false, all
@@ -461,13 +466,13 @@ public class Game implements Serializable, IGame {
         if (IPlayer.PLAYER_NONE == id) {
             return null;
         }
-        return playerIds.get(new Integer(id));
+        return playerIds.get(Integer.valueOf(id));
     }
 
     public void addPlayer(int id, IPlayer player) {
         player.setGame(this);
         players.addElement(player);
-        playerIds.put(new Integer(id), player);
+        playerIds.put(Integer.valueOf(id), player);
         setupTeams();
         updatePlayer(player);
     }
@@ -476,7 +481,7 @@ public class Game implements Serializable, IGame {
         final IPlayer oldPlayer = getPlayer(id);
         player.setGame(this);
         players.setElementAt(player, players.indexOf(oldPlayer));
-        playerIds.put(new Integer(id), player);
+        playerIds.put(Integer.valueOf(id), player);
         setupTeams();
         updatePlayer(player);
     }
@@ -488,7 +493,7 @@ public class Game implements Serializable, IGame {
     public void removePlayer(int id) {
         IPlayer playerToRemove = getPlayer(id);
         players.removeElement(playerToRemove);
-        playerIds.remove(new Integer(id));
+        playerIds.remove(Integer.valueOf(id));
         setupTeams();
         processGameEvent(new GamePlayerChangeEvent(this, playerToRemove));
     }
@@ -580,11 +585,9 @@ public class Game implements Serializable, IGame {
      */
     public boolean hasTacticalGenius(IPlayer player) {
         for (Entity entity : entities) {
-            if (entity.getCrew().getOptions().booleanOption("tactical_genius")
-                && entity.getOwner().equals(player)
-                && !entity.isDestroyed() && entity.isDeployed()
-                && !entity.isCarcass()
-                && !entity.getCrew().isUnconscious()) {
+            if (entity.hasAbility(OptionsConstants.MISC_TACTICAL_GENIUS)
+                    && entity.getOwner().equals(player) && !entity.isDestroyed() && entity.isDeployed()
+                    && !entity.isCarcass() && !entity.getCrew().isUnconscious()) {
                 return true;
             }
         }
@@ -598,7 +601,7 @@ public class Game implements Serializable, IGame {
     public List<Entity> getValidTargets(Entity entity) {
         List<Entity> ents = new ArrayList<Entity>();
 
-        boolean friendlyFire = getOptions().booleanOption("friendly_fire");
+        boolean friendlyFire = getOptions().booleanOption(OptionsConstants.BASE_FRIENDLY_FIRE);
 
         for (Entity otherEntity : entities) {
             // Even if friendly fire is acceptable, do not shoot yourself
@@ -606,6 +609,7 @@ public class Game implements Serializable, IGame {
             if ((otherEntity.getPosition() != null)
                     && !otherEntity.isOffBoard()
                     && otherEntity.isTargetable()
+                    && !otherEntity.isHidden()
                     && !otherEntity.isSensorReturn(entity.getOwner())
                     && otherEntity.hasSeenEntity(entity.getOwner())
                     && (entity.isEnemyOf(otherEntity) || (friendlyFire && (entity
@@ -646,21 +650,7 @@ public class Game implements Serializable, IGame {
     }
 
     public boolean isPhaseSimultaneous() {
-        switch (phase) {
-            case PHASE_DEPLOYMENT:
-                return getOptions().booleanOption("simultaneous_deployment");
-            case PHASE_MOVEMENT:
-                return getOptions().booleanOption("simultaneous_movement");
-            case PHASE_FIRING:
-                return getOptions().booleanOption("simultaneous_firing");
-            case PHASE_PHYSICAL:
-                return getOptions().booleanOption("simultaneous_physical");
-            case PHASE_TARGETING:
-            case PHASE_OFFBOARD:
-                return getOptions().booleanOption("simultaneous_targeting");
-            default:
-                return false;
-        }
+        return phase.isPhaseSimultaneous(this);
     }
 
     /**
@@ -747,12 +737,12 @@ public class Game implements Serializable, IGame {
     /**
      * Sets the current turn index
      */
-    public void setTurnIndex(int turnIndex) {
+    public void setTurnIndex(int turnIndex, int prevPlayerId) {
         // FIXME: occasionally getTurn() returns null. Handle that case
         // intelligently.
         this.turnIndex = turnIndex;
         processGameEvent(new GameTurnChangeEvent(this, getPlayer(getTurn()
-                .getPlayerNum())));
+                .getPlayerNum()), prevPlayerId));
     }
 
     /**
@@ -794,6 +784,9 @@ public class Game implements Serializable, IGame {
                 resetActions();
                 break;
             case PHASE_PHYSICAL:
+                resetActions();
+                break;
+            case PHASE_DEPLOYMENT:
                 resetActions();
                 break;
             case PHASE_INITIATIVE:
@@ -840,7 +833,7 @@ public class Game implements Serializable, IGame {
                 continue;
             }
 
-            Vector<Entity> roundVec = deploymentTable.get(new Integer(ent.getDeployRound()));
+            Vector<Entity> roundVec = deploymentTable.get(Integer.valueOf(ent.getDeployRound()));
 
             if (null == roundVec) {
                 roundVec = new Vector<Entity>();
@@ -874,14 +867,14 @@ public class Game implements Serializable, IGame {
     }
 
     private Vector<Entity> getEntitiesToDeployForRound(int round) {
-        return deploymentTable.get(new Integer(round));
+        return deploymentTable.get(Integer.valueOf(round));
     }
 
     /**
      * Clear this round from this list of entities to deploy
      */
     public void clearDeploymentThisRound() {
-        deploymentTable.remove(new Integer(getRoundCount()));
+        deploymentTable.remove(Integer.valueOf(getRoundCount()));
     }
 
     /**
@@ -1015,7 +1008,7 @@ public class Game implements Serializable, IGame {
         Vector<Entity> members = new Vector<Entity>();
         //WOR
         // Does the unit have a C3 computer?
-        if ((entity != null) && (entity.hasC3() || entity.hasC3i() || entity.hasActiveNovaCEWS())) {
+        if ((entity != null) && (entity.hasC3() || entity.hasC3i() || entity.hasActiveNovaCEWS() || entity.hasNavalC3())) {
 
             // Walk throught the entities in the game, and add all
             // members of the C3 network to the output Vector.
@@ -1049,8 +1042,8 @@ public class Game implements Serializable, IGame {
      */
     public Vector<Entity> getC3SubNetworkMembers(Entity entity) {
         //WOR
-        // Handle null, C3i, and company commander units.
-        if ((entity == null) || entity.hasC3i() || entity.hasActiveNovaCEWS() || entity.C3MasterIs(entity)) {
+        // Handle null, C3i, NC3, and company commander units.
+        if ((entity == null) || entity.hasC3i() || entity.hasNavalC3() || entity.hasActiveNovaCEWS() || entity.C3MasterIs(entity)) {
             return getC3NetworkMembers(entity);
         }
 
@@ -1243,7 +1236,7 @@ public class Game implements Serializable, IGame {
      */
 
     public Entity getEntity(int id) {
-        return entityIds.get(new Integer(id));
+        return entityIds.get(Integer.valueOf(id));
     }
 
     /**
@@ -1265,6 +1258,9 @@ public class Game implements Serializable, IGame {
         for (int i = 0; i < entities.size(); i++) {
             addEntity(entities.get(i), false);
         }
+        // We need to delay calculating BV until all units have been added because
+        // C3 network connections will be cleared if the master is not in the game yet.
+        entities.forEach(e -> e.setInitialBV(e.calculateBattleValue(false, false)));
         processGameEvent(new GameEntityNewEvent(this, entities));
     }
 
@@ -1282,9 +1278,11 @@ public class Game implements Serializable, IGame {
         entity.setGame(this);
         if (entity instanceof Mech) {
             ((Mech) entity).setBAGrabBars();
+            ((Mech) entity).setProtomechClampMounts();
         }
         if (entity instanceof Tank) {
             ((Tank) entity).setBAGrabBars();
+            ((Tank) entity).setTrailerHitches();
         }
 
         // Add magnetic clamp mounts
@@ -1305,7 +1303,7 @@ public class Game implements Serializable, IGame {
         // Add this Entity, ensuring that it's id is unique
         int id = entity.getId();
         if (!entityIds.containsKey(id)) {
-            entityIds.put(new Integer(id), entity);
+            entityIds.put(Integer.valueOf(id), entity);
         } else {
             id = getNextEntityId();
             entity.setId(id);
@@ -1320,7 +1318,7 @@ public class Game implements Serializable, IGame {
 
         // And... lets get this straight now.
         if ((entity instanceof Mech)
-            && getOptions().booleanOption("conditional_ejection")) {
+            && getOptions().booleanOption(OptionsConstants.RPG_CONDITIONAL_EJECTION)) {
             ((Mech) entity).setAutoEject(true);
             if (((Mech) entity).hasCase()
                 || ((Mech) entity).hasCASEIIAnywhere()) {
@@ -1335,6 +1333,7 @@ public class Game implements Serializable, IGame {
 
         assert (entities.size() == entityIds.size()) : "Add Entity failed";
         if (genEvent) {
+            entity.setInitialBV(entity.calculateBattleValue(false, false));
             processGameEvent(new GameEntityNewEvent(this, entity));
         }
     }
@@ -1379,7 +1378,7 @@ public class Game implements Serializable, IGame {
      * game.
      */
     public boolean hasEntity(int entityId) {
-        return entityIds.containsKey(new Integer(entityId));
+        return entityIds.containsKey(Integer.valueOf(entityId));
     }
 
     /**
@@ -1398,7 +1397,7 @@ public class Game implements Serializable, IGame {
         }
 
         entities.remove(toRemove);
-        entityIds.remove(new Integer(id));
+        entityIds.remove(Integer.valueOf(id));
         removeEntityPositionLookup(toRemove);
 
         toRemove.setRemovalCondition(condition);
@@ -1502,7 +1501,7 @@ public class Game implements Serializable, IGame {
             // Add these entities to the game.
             for (Entity entity : entities) {
                 final int id = entity.getId();
-                entityIds.put(new Integer(id), entity);
+                entityIds.put(Integer.valueOf(id), entity);
 
                 if (id > lastEntityId) {
                     lastEntityId = id;
@@ -1564,22 +1563,22 @@ public class Game implements Serializable, IGame {
     }
 
     /**
-     * Return a Vector of Entites at Coords <code>c</code>
+     * Return a List of Entities at Coords <code>c</code>
      *
-     * @param c
-     * @return <code>Vector<Entity></code>
+     * @param c The coordinates to check
+     * @return <code>List<Entity></code>
      */
     public List<Entity> getEntitiesVector(Coords c) {
         return getEntitiesVector(c, false);
     }
 
     /**
-     * Return a Vector of Entites at Coords <code>c</code>
+     * Return a List of Entities at Coords <code>c</code>
      *
-     * @param c
+     * @param c The coordinates to check
      * @param ignore
      *            Flag that determines whether the ability to target is ignored
-     * @return <code>Vector<Entity></code>
+     * @return <code>List<Entity></code>
      */
     public synchronized List<Entity> getEntitiesVector(Coords c, boolean ignore) {
         //checkPositionCacheConsistency();
@@ -1588,11 +1587,19 @@ public class Game implements Serializable, IGame {
                 || (entityPosLookup.size() < 1 && entities.size() > 0)) {
             resetEntityPositionLookup();
         }
-        HashSet<Integer> posEntities = entityPosLookup.get(c);
-        ArrayList<Entity> vector = new ArrayList<Entity>();
+        Set<Integer> posEntities = entityPosLookup.get(c);
+        List<Entity> vector = new ArrayList<Entity>();
         if (posEntities != null) {
             for (Integer eId : posEntities) {
                 Entity e = getEntity(eId);
+                
+                // if the entity with the given ID doesn't exist, we will update the lookup table
+                // and move on
+                if(e == null) {
+                    posEntities.remove(eId);
+                    continue;
+                }
+                
                 if (e.isTargetable() || ignore) {
                     vector.add(e);
 
@@ -1611,7 +1618,7 @@ public class Game implements Serializable, IGame {
     /**
      * Return a Vector of gun emplacements at Coords <code>c</code>
      *
-     * @param c
+     * @param c The coordinates to check
      * @return <code>Vector<Entity></code>
      */
     public Vector<GunEmplacement> getGunEmplacements(Coords c) {
@@ -1619,15 +1626,35 @@ public class Game implements Serializable, IGame {
 
         // Only build the list if the coords are on the board.
         if (board.contains(c)) {
-            for (Entity entity : entities) {
-                if (c.equals(entity.getPosition())
-                    && (entity instanceof GunEmplacement)) {
+            for (Entity entity : getEntitiesVector(c, true)) {
+                if (entity.hasETypeFlag(Entity.ETYPE_GUN_EMPLACEMENT)) {
                     vector.addElement((GunEmplacement) entity);
                 }
             }
         }
 
         return vector;
+    }
+    
+    /**
+     * Determine if the given set of coordinates has a gun emplacement on the roof of a building.
+     * @param c The coordinates to check
+     */
+    public boolean hasRooftopGunEmplacement(Coords c) {
+        Building building = getBoard().getBuildingAt(c);
+        if(building == null) {
+            return false;
+        }
+        
+        IHex hex = getBoard().getHex(c);
+        
+        for (Entity entity : getEntitiesVector(c, true)) {
+            if (entity.hasETypeFlag(Entity.ETYPE_GUN_EMPLACEMENT) && entity.getElevation() == hex.ceiling()) {
+                return true;
+            }
+        }
+        
+        return false;
     }
 
     /**
@@ -1687,6 +1714,24 @@ public class Game implements Serializable, IGame {
                 return false;
             }
         });
+    }
+    
+    /**
+     * Returns an <code>Enumeration</code> of all active enemy entities.
+     *
+     * @param currentEntity
+     *            the <code>Entity</code> whose enemies are needed.
+     * @return an <code>Enumeration</code> of <code>Entity</code>s at the given
+     *         coordinates who are enemies of the given unit.
+     */
+    public Iterator<Entity> getAllEnemyEntities(final Entity currentEntity) {
+    	return getSelectedEntities(new EntitySelector() {
+    		private Entity friendly = currentEntity;
+    		
+    		public boolean accept(Entity entity) {
+    			return entity.isTargetable() && entity.isEnemyOf(friendly);
+    		}
+    	});
     }
 
     /**
@@ -1809,16 +1854,6 @@ public class Game implements Serializable, IGame {
     }
 
     /**
-     * Returns the Entity id of the next entity that can move during the current
-     * turn.
-     *
-     * @param start the Entity Id to start at
-     */
-    public int getNextEntityNum(int start) {
-        return getNextEntityNum(getTurn(), start);
-    }
-
-    /**
      * Returns the entity id of the next entity that can move during the
      * specified
      *
@@ -1826,11 +1861,15 @@ public class Game implements Serializable, IGame {
      * @param start the entity id to start at
      */
     public int getNextEntityNum(GameTurn turn, int start) {
+        // If we don't have a turn, return ENTITY_NONE
+        if (turn == null) {
+            return Entity.NONE;
+        }
         boolean hasLooped = false;
         int i = (entities.indexOf(entityIds.get(start)) + 1) % entities.size();
         if (i == -1) {
             //This means we were given an invalid entity ID, punt
-            return -1;
+            return Entity.NONE;
         }
         int startingIndex = i;
         while (!((hasLooped == true) && (i == startingIndex))) {
@@ -1845,7 +1884,7 @@ public class Game implements Serializable, IGame {
             }
         }
         // return getFirstEntityNum(turn);
-        return -1;
+        return Entity.NONE;
     }
 
     /**
@@ -1882,13 +1921,6 @@ public class Game implements Serializable, IGame {
         return -1;
     }
 
-    /**
-     * Returns the number of the first deployable entity
-     */
-    public int getFirstDeployableEntityNum() {
-        return getFirstDeployableEntityNum(getTurn());
-    }
-
     public int getFirstDeployableEntityNum(GameTurn turn) {
         // Repeat the logic from getFirstEntityNum.
         if (turn == null) {
@@ -1901,13 +1933,6 @@ public class Game implements Serializable, IGame {
             }
         }
         return -1;
-    }
-
-    /**
-     * Returns the number of the next deployable entity
-     */
-    public int getNextDeployableEntityNum(int entityId) {
-        return getNextDeployableEntityNum(getTurn(), entityId);
     }
 
     public int getNextDeployableEntityNum(GameTurn turn, int start) {
@@ -2107,11 +2132,11 @@ public class Game implements Serializable, IGame {
         // then we might not need to remove a turn at all.
         // A turn only needs to be removed when going from 4 inf (2 turns) to
         // 3 inf (1 turn)
-        if (getOptions().booleanOption("inf_move_multi")
+        if (getOptions().booleanOption(OptionsConstants.INIT_INF_MOVE_MULTI)
             && (entity instanceof Infantry)
             && (phase == Phase.PHASE_MOVEMENT)) {
             if ((getInfantryLeft(entity.getOwnerId()) % getOptions().intOption(
-                    "inf_proto_move_multi")) != 1) {
+                    OptionsConstants.INIT_INF_PROTO_MOVE_MULTI)) != 1) {
                 // exception, if the _next_ turn is an infantry turn, remove
                 // that
                 // contrived, but may come up e.g. one inf accidently kills
@@ -2131,11 +2156,11 @@ public class Game implements Serializable, IGame {
             }
         }
         // Same thing but for protos
-        if (getOptions().booleanOption("protos_move_multi")
+        if (getOptions().booleanOption(OptionsConstants.INIT_PROTOS_MOVE_MULTI)
             && (entity instanceof Protomech)
             && (phase == Phase.PHASE_MOVEMENT)) {
             if ((getProtomechsLeft(entity.getOwnerId()) % getOptions()
-                    .intOption("inf_proto_move_multi")) != 1) {
+                    .intOption(OptionsConstants.INIT_INF_PROTO_MOVE_MULTI)) != 1) {
                 // exception, if the _next_ turn is an protomek turn, remove
                 // that
                 // contrived, but may come up e.g. one inf accidently kills
@@ -2156,10 +2181,10 @@ public class Game implements Serializable, IGame {
         }
 
         // Same thing but for vehicles
-        if (getOptions().booleanOption("vehicle_lance_movement")
+        if (getOptions().booleanOption(OptionsConstants.ADVGRNDMOV_VEHICLE_LANCE_MOVEMENT)
             && (entity instanceof Tank) && (phase == Phase.PHASE_MOVEMENT)) {
             if ((getVehiclesLeft(entity.getOwnerId()) % getOptions()
-                    .intOption("vehicle_lance_movement_number")) != 1) {
+                    .intOption(OptionsConstants.ADVGRNDMOV_VEHICLE_LANCE_MOVEMENT_NUMBER)) != 1) {
                 // exception, if the _next_ turn is a tank turn, remove that
                 // contrived, but may come up e.g. one tank accidently kills
                 // another
@@ -2179,10 +2204,10 @@ public class Game implements Serializable, IGame {
         }
 
         // Same thing but for meks
-        if (getOptions().booleanOption("mek_lance_movement")
+        if (getOptions().booleanOption(OptionsConstants.ADVGRNDMOV_MEK_LANCE_MOVEMENT)
             && (entity instanceof Mech) && (phase == Phase.PHASE_MOVEMENT)) {
             if ((getMechsLeft(entity.getOwnerId()) % getOptions()
-                    .intOption("mek_lance_movement_number")) != 1) {
+                    .intOption(OptionsConstants.ADVGRNDMOV_MEK_LANCE_MOVEMENT_NUMBER)) != 1) {
                 // exception, if the _next_ turn is a mech turn, remove that
                 // contrived, but may come up e.g. one mech accidently kills
                 // another
@@ -2207,9 +2232,9 @@ public class Game implements Serializable, IGame {
         //  rules, then we may be removing an infantry unit that would be
         //  considered invalid unless we don't consider the extra validity
         //  checks.
-        if ((getOptions().booleanOption("inf_move_later") &&
+        if ((getOptions().booleanOption(OptionsConstants.INIT_INF_MOVE_LATER) &&
              (entity instanceof Infantry)) ||
-            (getOptions().booleanOption("protos_move_later") &&
+            (getOptions().booleanOption(OptionsConstants.INIT_PROTOS_MOVE_LATER) &&
              (entity instanceof Protomech))) {
             useInfantryMoveLaterCheck = false;
         }
@@ -2397,7 +2422,7 @@ public class Game implements Serializable, IGame {
     }
 
     public void rollInitAndResolveTies() {
-        if (getOptions().booleanOption("individual_initiative")) {
+        if (getOptions().booleanOption(OptionsConstants.RPG_INDIVIDUAL_INITIATIVE)) {
             Vector<TurnOrdered> vRerolls = new Vector<TurnOrdered>();
             for (int i = 0; i < entities.size(); i++) {
                 Entity e = entities.get(i);
@@ -2408,11 +2433,16 @@ public class Game implements Serializable, IGame {
             TurnOrdered.rollInitAndResolveTies(getEntitiesVector(), vRerolls, false);
         } else {
             TurnOrdered.rollInitAndResolveTies(teams, initiativeRerollRequests,
-                                               getOptions()
-                                                       .booleanOption("initiative_streak_compensation"));
+                    getOptions().booleanOption(OptionsConstants.INIT_INITIATIVE_STREAK_COMPENSATION));
         }
         initiativeRerollRequests.removeAllElements();
 
+    }
+    
+    public void handleInitiativeCompensation() {
+        if (getOptions().booleanOption(OptionsConstants.INIT_INITIATIVE_STREAK_COMPENSATION)) {
+            TurnOrdered.resetInitiativeCompensation(teams, getOptions().booleanOption(OptionsConstants.INIT_INITIATIVE_STREAK_COMPENSATION));
+        }
     }
 
     public int getNoOfInitiativeRerollRequests() {
@@ -2552,7 +2582,7 @@ public class Game implements Serializable, IGame {
         for (i = 0; i < pilotRolls.size(); i++) {
             roll = pilotRolls.elementAt(i);
             if (roll.getEntityId() == entity.getId()) {
-                rollsToRemove.addElement(new Integer(i));
+                rollsToRemove.addElement(Integer.valueOf(i));
             }
         }
 
@@ -2581,14 +2611,14 @@ public class Game implements Serializable, IGame {
         for (i = 0; i < extremeGravityRolls.size(); i++) {
             roll = extremeGravityRolls.elementAt(i);
             if (roll.getEntityId() == entity.getId()) {
-                rollsToRemove.addElement(new Integer(i));
+                rollsToRemove.addElement(Integer.valueOf(i));
             }
         }
 
         // now, clear them out
         for (i = rollsToRemove.size() - 1; i > -1; i--) {
             extremeGravityRolls.removeElementAt(rollsToRemove.elementAt(i)
-                                                             .intValue());
+                    .intValue());
         }
     }
 
@@ -2692,7 +2722,6 @@ public class Game implements Serializable, IGame {
 
     public void addReports(Vector<Report> v) {
         if (v.size() == 0) {
-            System.out.println("Game.addReports() received blank vector.");
             return;
         }
         gameReports.add(roundCount, v);
@@ -3003,10 +3032,10 @@ public class Game implements Serializable, IGame {
             Entity entity = iter.next();
             boolean excluded = false;
             if ((entity instanceof Infantry)
-                && getOptions().booleanOption("inf_move_later")) {
+                && getOptions().booleanOption(OptionsConstants.INIT_INF_MOVE_LATER)) {
                 excluded = true;
             } else if ((entity instanceof Protomech)
-                       && getOptions().booleanOption("protos_move_later")) {
+                       && getOptions().booleanOption(OptionsConstants.INIT_PROTOS_MOVE_LATER)) {
                 excluded = true;
             }
 
@@ -3170,16 +3199,18 @@ public class Game implements Serializable, IGame {
     }
 
     /**
-     * Get a set of illuminated hexes.  Note: this should not be used to
-     * determine if a hex is illuminated! Use <code>isPositionIlluminated</code>
-     * for that purpose!
+     * Get a set of Coords illuminated by searchlights.
+     * 
+     * Note: coords could be illuminated by other sources as well, it's likely
+     * that IGame.isPositionIlluminated is desired unless the searchlighted hex
+     * set is being sent to the client or server.
      */
     public HashSet<Coords> getIlluminatedPositions() {
         return illuminatedPositions;
     }
 
     /**
-     * Clear the map of illuminated hexes.
+     * Clear the set of searchlight illuminated hexes.
      */
     public void clearIlluminatedPositions() {
         if (illuminatedPositions == null) {
@@ -3189,7 +3220,7 @@ public class Game implements Serializable, IGame {
     }
 
     /**
-     * Set the set of illuminated hexes.
+     * Setter for the list of Coords illuminated by search lights.
      */
     public void setIlluminatedPositions(HashSet<Coords> ip) {
         if (ip == null) {
@@ -3200,7 +3231,7 @@ public class Game implements Serializable, IGame {
     }
 
     /**
-     * Add a new hex to the collection of illuminated hexes.
+     * Add a new hex to the collection of Coords illuminated by searchlights.
      *
      * @return True if a new hex was added, else false if the set already
      * contained the input hex.
@@ -3212,9 +3243,18 @@ public class Game implements Serializable, IGame {
     }
 
     /**
-     * returns true if the hex is illuminated by a flare
+     * Returns the level of illumination for a given coords.  Different light
+     * sources affect how much the night-time penalties are reduced. Note: this
+     * method should be used for determining is a Coords/Hex is illuminated, not
+     * IGame. getIlluminatedPositions(), as that just returns the hexes that
+     * are effected by spotlights, whereas this one considers searchlights as
+     * well as other light sources.
      */
     public int isPositionIlluminated(Coords c) {
+    	// fix for NPE when recovering spacecraft while in visual range of enemy
+    	if (getBoard().inSpace()) {
+    		return ILLUMINATED_NONE;
+    	}
         // Flares happen first, because they totally negate nighttime penalties
         for (Flare flare : flares) {
             if (flare.illuminates(c)) {
@@ -3308,19 +3348,12 @@ public class Game implements Serializable, IGame {
     }
 
     public boolean gameTimerIsExpired() {
-        return ((getOptions().booleanOption("use_game_turn_limit")) && (getRoundCount() == getOptions()
-                .intOption("game_turn_limit")));
+        return ((getOptions().booleanOption(OptionsConstants.VICTORY_USE_GAME_TURN_LIMIT)) && (getRoundCount() == getOptions()
+                .intOption(OptionsConstants.VICTORY_GAME_TURN_LIMIT)));
     }
 
-    /**
-     * use victoryfactory to generate a new victorycondition checker provided
-     * that the victorycontext is saved properly, calling this method at any
-     * time is ok and should not affect anything unless the
-     * victorycondition-configoptions have changed.
-     */
     public void createVictoryConditions() {
-        victory = vf
-                .createVictory("this string should be taken from game options");
+        victory = new Victory(getOptions());
     }
 
     public Victory getVictory() {
@@ -3330,7 +3363,7 @@ public class Game implements Serializable, IGame {
     // a shortcut function for determining whether vectored movement is
     // applicable
     public boolean useVectorMove() {
-        return getOptions().booleanOption("advanced_movement")
+        return getOptions().booleanOption(OptionsConstants.ADVAERORULES_ADVANCED_MOVEMENT)
                && board.inSpace();
     }
 
@@ -3360,7 +3393,7 @@ public class Game implements Serializable, IGame {
         for (i = 0; i < controlRolls.size(); i++) {
             roll = controlRolls.elementAt(i);
             if (roll.getEntityId() == entity.getId()) {
-                rollsToRemove.addElement(new Integer(i));
+                rollsToRemove.addElement(Integer.valueOf(i));
             }
         }
 
@@ -3454,7 +3487,7 @@ public class Game implements Serializable, IGame {
         if (null == conditions) {
             System.err.println("Can't set the planetary conditions to null!");
         } else {
-            planetaryConditions = conditions;
+            planetaryConditions.alterConditions(conditions);
             processGameEvent(new GameSettingsChangeEvent(this));
         }
     }
